--- a/ok/rm/rm03-0.2.0.0.0.md
+++ b/ok/rm/rm03-0.2.0.0.0.md
@@ -154,13 +154,17 @@
 
 髓由精所生，液为补充。
 
-> 津与液都属正常的水液，都由水谷精微所化，故常津液并称。津液散布于体表，能温润肌肤；布散于体内，能灌溉脏腑；渗注于空窍，能润泽目、耳、口鼻；浸润于骨节，使关节滑利；流注于骨*髓*，能补益脑*髓*，渗灌于血脉，能补充血液。但津与液两者在性质上、分布部位和作用上有所区别，津清稀，流行于表，以温润肌肤。液浓稠，流而不行，故主里，以润泽空窍，滑利关节，补益脑*髓*。正如张景岳所说：“津液本为同类，然亦有阴阳之分。盖津者，液之清者也；液者，津之浊者也。津为汗而走腠理，故属阳；液注骨补脑*髓*，故属阴。”
+> 津与液都属正常的水液，都由水谷精微所化，故常津液并称。津液散布于体表，能温润肌肤；布散于体内，能灌溉脏腑；渗注于空窍，能润泽目、耳、口鼻；浸润于骨节，使关节滑利；流注于骨髓，能补益脑髓，渗灌于血脉，能补充血液。但津与液两者在性质上、分布部位和作用上有所区别，津清稀，流行于表，以温润肌肤。液浓稠，流而不行，故主里，以润泽空窍，滑利关节，补益脑髓。正如张景岳所说：“津液本为同类，然亦有阴阳之分。盖津者，液之清者也；液者，津之浊者也。津为汗而走腠理，故属阳；液注骨补脑*髓*，故属阴。”
 
+#### 小结：
 
+泣、涕、涎、唾、尿、汗是津液的外在表现，因此中医通过观察这些物质的状态来判断人体内部津液的状态。若这类体液偏粘稠混浊则代表体内津液偏热，若偏稀薄清冷则代表体内津液偏寒。
 
+> 水液浑浊，皆属于热（18）。诸病水液，澄彻清冷，皆属于寒（19）
+>
+> 《素问-至真要大论》
 
-
-#### 资料
+比如有口粘腻、尿液混浊、鼻涕混浊等情况，皆可以考虑有热，反之考虑有寒。
 
 > **五藏化液（1），心为汗（2），肺为涕（3），肝为泪（4），脾为涎⑸，肾为唾，是谓五液（6）。**
 >
