--- a/ok/rm/rm04.md
+++ b/ok/rm/rm04.md
@@ -104,7 +104,7 @@
 | 正虚 | 精不足 | 神不足   | 阳虚 | 气虚                          | 血虚          | 津液虚 | 肉槁、骨陷 |
 | 邪实 | 精浊   | 七情太过 | 阳亢 | 六淫太过、气郁、气滞、气逆... | 血淤、血热... | 痰饮   | 瘿、瘤...  |
 
-人体的脏、腑、皮、肉、筋、骨全身各处，都需要这几大要素的平衡，也都有可能出现各自的失衡。比如肝可以有精的虚实、神的虚实、元气的虚实、天气的虚实、血的虚实等等，肺、心、脾、肾也是如此，皮、肉、筋、骨也是如此。这就是中医的证。辨证论治就是要分辨出哪些部位分别有哪种失衡，进而进行对证治疗。
+人体的脏、腑、皮、肉、筋、骨全身各处，都需要这几大要素的平衡，也都有可能出现各自的失衡。比如肝可以有精的虚实、神的虚实、元气的虚实、天气的虚实、血的虚实等等，肺、心、脾、肾也是如此，皮、肉、筋、骨也是如此。**这类要素的失衡就是中医的证。**辨证论治就是要分辨出哪些部位分别有哪种失衡，进而进行对证治疗。
 
 教材《概论》的辨证章节，只是列出了一些常见的情况，比如肝只列出了肝气郁结、肝火上炎、肝火上亢、肝风内动、 肝胆湿热、寒滞肝脉等几种情况，这些应只是常见情况，并非全部，其它也是类似。
 
