--- a/ok/rm/rm07.md
+++ b/ok/rm/rm07.md
@@ -1,30 +1,34 @@
-# 第七章 初步判断人体失衡情况
+# 第七章 判断人体失衡情况
 
-### 1、初步判断
+## 1、基本原理
 
-前面介绍了人体的重要指标：精、元气、神、气、血、津液、形。下面要探讨如何判断这些指标的失衡状态。
+前面介绍了人体的要素包括精、元气、神、气、血、津液、形等，这类要素的失衡就称之为证。判断要素失衡状态的过程称为辩证。下面介绍中医辩证的原理。
 
-中医的核心在于辨证论治。
+1）有形与无形的关系
 
-**证**就是上述指标出现失衡的性质、部位和程度。比如精的失衡常见为精虚。血的失衡常见为血虚、血淤、血热。气的失衡可以有气虚、气滞、气郁等。
+几种要素中，精、神、元气能量、气态物质属于肉眼不可见的要素，称为无形之物。血、津液、形体属于肉眼可见的有形之物。无形之物难以观察测量，有形之物易于观察测量。有形与无形的物质相互作用，可以通过有形之物的状态反推无形之物的状态。这个原理就像风吹树木，风为无形的空气流动，其风力大小无法直接观察，但是我们可以根据树木被风吹后的倾斜程度，来判断风力的大小。
 
-**辨证**就是如何分辨证的类型的问题。对证进行量化测量是很困难的事情，现在的仪器设备还难以达到中医的要求。所以目前主要还是采用传统的司外揣内方法。中医认为有其内必有其外，内在气血能量的状态必然有外在的体现。一旦掌握了内在状态与外在表现的关系，我们就可以通过外在表现判断出内在状态，这就是中医四诊望、闻、问、切的道理。
+中医中的脉诊，是通过感受动脉的跳动情况来了解人体气血的状态。原理是经络中的气态物质推动血脉中的血液跳动，因此血的运行状态可以体现气的运行状态。《桂本伤寒论》中说“脉乃气血先见”，即为此意。
 
-人体的眼、面、脉搏等部位就像汽车的故障指示灯一样，能够表示出内在指标的各种问题。为了防止单一的指示灯故障，所以我们需要尽量多的收集各种指示灯提示的信息，进行综合判断。如果多个指示灯都指明是同一故障，才能比较准确的确定故障位置和性质，这就是为什么要四诊合参。
+> 脉乃气血先见，气血有盛衰，脏腑有偏胜。气血俱盛，脉阴阳俱盛；气血俱衰，脉阴阳俱衰。气独胜者，则脉强；血独盛者，则脉滑；气偏衰者，则脉微；血偏衰者，则脉涩；气血和者，则脉缓；气血平者，则脉平；气血乱者，则脉乱；气血脱者，则脉绝；阳迫气血，则脉数；阴阻气血，则脉迟；若感于邪，气血扰动，脉随变化，变化无穷，气血使之；病变百端，本原别之；欲知病源，当凭脉变；欲知病变，先揣其本，本之不齐，在人体躬，相体以诊，病无遁情。
+>
+> 《桂本伤寒论-平脉法第一》
+
+2）内与外的关系
+
+人体内外有别，有形的物质虽然容易观察，但若隐藏在人体内部，则观察也是有难度的。但人是一个整体，内在的失衡往往有外在的表现，如果掌握了内在失衡和外在表现的关系，就可以通过外在表现判断内在状态，这就是中医“有诸内，必形诸外”、“司外而揣内”的道理。
+
+基于以上两点，中医通过四诊望、闻、问、切的手段，搜集人体外在、有形的表现，来推知人体内在、无形的状态。人体的目、面、舌、脉搏等部位就像汽车的故障指示灯一样，能够表示出内在指标的各种问题。为了防止单一的指示灯故障，所以我们需要尽量多的收集各种指示灯提示的信息，进行综合判断。如果多个指示灯都指明是同一故障，才能比较准确的确定故障位置和性质，这就是为什么要四诊合参。
+
+> 前人云：有是症则有是病。对病人所反映出来的症状要不厌其多，资料越多越有利于辨证。因此，可以说诊察是辨证论治的起点。
+>
+> 《中医临证程序与临床辨证思维方法-诊察》
 
 有时还会出现不同的指示灯表达了相反的故障信息，这时要根据经验判断哪个指示灯表示的问题更准确，需要进行取舍，并在后继的调理过程中进行观察，判断取舍是否正确。这就是“舍脉从证”或者“舍证从脉”。
 
-**论治**则是在准确辨证的基础上，确定调节平衡的方案，实则泻，虚则补。如果多部位出现多指标的失衡，则根据轻重缓急确定调节的先后顺序。
+## 2、初步判断
 
-中医判断人的健康状态，首先要判断精、气、神。神为身体的管理者，气为身体的能量。两者有一个出问题，都易造成久病；两者同时出问题，则是危重病的标志。至于精，如果先天之精耗尽，则人正常寿命终了。
-
-判断神主要观察目的状态，判断气要注意观察面部的颜色与光泽，具体在下面详细说明
-
-> **色生于脏，各命其部。神藏于心，外候在目。**
->
-> **光晦神短，了了神足，单失久病，双失即故。**
->
-> 《诊法口诀浅释》
+中医判断人的健康状态，首先要判断精、神，其次判断气、血。
 
 #### 1、判断神的状态：
 
@@ -38,9 +42,29 @@
 
 若神气充足，则人很少生病，生病也容易痊愈。反之，神气不足，则易病难愈，且容易得大病。
 
-#### 2、判断气的状态
+#### 3、判断精的状态
 
-中医以调气为主，所以中医判断气的内容也是最多的。这里简单介绍：面色、脉象、舌像、尺肤等几种方法的大概原则，算是索引，具体还是要参考教材诊断的内容。
+精有先、后天之分。先天之精在肾，后天之精在脾。
+
+肾的功能主生殖、主骨。
+
+从生殖角度，当男子溢精和女子月经来潮的功能出现问题的时候，标志肾精不足。
+
+从主骨角度看，齿为骨之余，肾主骨，精生髓。所以精开始不足的时候，先从牙齿上体现出来，松动掉落。进一步不足的时候，从骨骼上体现出来，老年人弯腰驼背、容易骨折。到比较严重的时候出现大骨枯槁，出现肩垂，项倾，腰折，膝败，脊骨突起的现象，这就表明肾精已经衰弱到相当严重，预后不良。
+
+脾主消化吸收，主肌肉。
+
+从消化吸收角度看，当人的饮食能力下降，标志脾精开始不足。
+
+从肌肉角度看，当出现肌肉不结实、人中沟变浅缩短的情况，代表脾的能力下降。严重的出现臂、腿、臀等部位的肌肉失养、瘦削，称为大肉陷下，则代表脾精衰败。
+
+> 骨为肾所主，肾为先天之本；肉为脾所主，脾为后天之本。如果人中沟深而长，面部肌肉高厚，轮廓方正，面部上、中、下三部耸起而不平陷，肌肉丰满，骨骼高起者，则提示先后天精气皆旺盛，所以人能长寿，活百岁而终其天年。
+>
+> 《黄帝内经讲解-寿夭与先后天的关系》
+
+#### 2、判断气血的状态
+
+中医判断气血的内容最多。这里简单介绍：面色、脉象、尺肤等几种方法的大概原则，算是索引，具体还是要参考教材诊断的内容。
 
 > **夫色脉与尺之相应也，如桴鼓影响之相应也，不得相失也，此亦本末根叶之出候也，故根死则叶枯矣⑴。色脉形肉不得相失也，故知一则为工，知二则为神，知三则神且明矣（2）。**
 >
@@ -66,13 +90,45 @@
 
 ##### 2、脉象
 
-诊脉是通过人体一些部位的动脉跳动形态变化来判断人体内能量状态的方法。为什么动脉跳动的情况能够反应人体能量状态？因为前面说过，人的血液在血管中流动，是在气的帮助下进行的。气足则血液流动通畅，气不足则血流瘀滞。
+诊脉是通过人体一些部位的动脉跳动形态变化来判断人体内各种要素的失衡状态。
 
 > 十二经脉循行部位上均有搏动应手之处。因此，可以在每一经的动脉处，测候该条经脉所络属脏腑的功能活动。例如，中部天，手太阴太渊穴，即寸口脉处,可诊候肺。中部人，手少阴神门穴处，可诊候心。下部天，足厥阴五里穴处，可诊候肝，女子取太冲穴。下部地，足少阴太溪穴处，可诊候肾。下部人，足太阴箕门穴处，可诊候脾，趺阳脉冲阳穴处可诊候胃。临证可在上述部位，测候所主脏腑精气的盛衰。
 
-为了简便，现在普遍采用诊手腕肺经太渊穴的脉搏来诊断全身，即寸口脉。因为“脉气始于胃，输于脾、但百脉朝会于肺，需赖肺气的推动才能灌注于五脏六腑”，所以各脏腑病变在寸口脉上都有体现。
+脉的跳动是一种波动，其频率、力度、长度、高度等等指标皆有特定意义。
 
-关于寸口脉的细节，内容也比较多，[《概论-切诊》](https://www.gmzy.org.cn/read/gl/gl05-0.4.0.0.0.md)、[《口诀浅释-切诊》](https://www.gmzy.org.cn/read/qs/qs01.md#_6)[《伤寒论讲解-辨脉法》](https://www.gmzy.org.cn/read/shl/shl01.01-1.2.0.0.0.md)讲的比较详细，大家可以参考。
+力度：脉搏的力度应适中，若力度过小，称为虚脉，代表气不足；若力度过大，称为实脉，代表邪气过多而正气不虚，正邪对抗有力。
+
+宽度：脉的宽度应该适中，若宽度过于窄小，甚至像线一样，称为细脉或小脉，代表血管中的血不足；若宽度过大，称为大脉，代表血管中的血偏多。
+
+长度：脉搏每个波动与按脉手指接触的长度应适中，若长度较长，像琴弦一样，称为弦脉，代表肝胆气瘀滞，气不通则痛，所以常有痛症。若长度较短，像豆子一样，称为动脉，代表气血不通或者气血逆乱。
+
+流速：脉的流动速度应适中，若过于流利，感觉圆滑，称为滑脉，代表气血涌动过快；若流动过于慢，往来艰涩、迟滞，如轻刀刮竹，代表气血流动慢。
+
+频率：脉搏正常频率应该是一呼一吸跳动四次，多于这个次数称之为数脉，代表有热；少于四次称为迟脉，代表有寒。
+
+高度：脉的高低是指轻按为高，又叫浮取，离皮肤近；重按为低，又叫沉取，离骨近；不轻不重在两者之间为中取；无论浮、中、沉，脉搏的感觉应相差不大。如果轻按的脉搏比重按的时候明显，称为浮脉，代表气血聚于表层。若重按的脉搏更明显，称为沉脉，代表气血聚集于身体里层。
+
+以上力度、频率、高度、宽度、长度、流速代表了脉搏的几大纬度指标，每个指标都有其正常范围，超过正常范围则为失衡，向上失衡为阳，向下失衡为阴。所以《桂本伤寒论-平脉法第二》说“**凡脉大、浮、数、动、滑，此名阳也；凡脉沉、涩、迟、弦、微，此名阴也**”，其中浮、沉是从高度辨阴阳，滑、涩从流速辨阴阳，数、迟从频率角度辨阴阳，动、弦从长度辨阴阳，大、微从宽度辨阴阳。
+
+这些指标排列组合可以形成非常多的组合脉象，有丰富的含义。比如脉数代表热，脉无力代表气虚，若两者兼有数而无力，则代表气虚而热；若是数而有力则代表实热。其它各类组合，如浮大数、浮数、沉涩、细数等等各有其含义。组合脉象的数量远远超出后世所说的二十八脉。二十八脉是常见脉的经验表达，其中有些为组合脉，比如革脉为沉、弦、大、实的组合；濡脉为浮、细、虚的组合；芤脉为浮、大、虚的组合。理解了脉的逻辑含义，学习二十八脉并不难。
+
+总之脉象越接近正常波形，人越健康；远离正常波形，则不健康，严重的则代表死亡。中医中的各种绝脉，比如真脏脉、死脉、怪脉都是远离正常波形的脉象。
+
+各种脉象所代表的更多含义，因篇幅所限，不再介绍，教材的[《概论-切诊》](https://www.gmzy.org.cn/read/gl/gl05-0.4.0.0.0.md)、[《口诀浅释-切诊》](https://www.gmzy.org.cn/read/qs/qs01.md#_6)[《伤寒论讲解-辨脉法》](https://www.gmzy.org.cn/read/shl/shl01.01-1.2.0.0.0.md)讲的比较详细，大家可以参考。
+
+> **问曰：脉有阴阳，何谓也？答曰：凡脉大浮数动滑，此名阳也；脉沉涩弱弦微，此名阴也。凡阴病见阳脉者生，阳病见阴脉者死。**
+>
+> 《伤寒论-辨脉法》
+
+> 此言者，非有六脉俱动也，谓浮、沉、长、短、滑、涩也。浮者阳也，滑者阳也，长者阳也；沉者阴也，短者阴也，涩者阴也。所谓一阴一阳者，谓脉来沉而滑也，一阴二阳者，谓脉来沉滑而长也，一阴三阳者，谓脉来浮滑而长，时一沉也；所谓一阳一阴者，谓脉来浮而涩也；一阳二阴者，谓脉来长而沉涩也；一阳三阴者，谓脉来沉涩而短，时一浮也。各以其经所在，名病顺逆也。
+>
+> 《难经-四难》
+
+寸口脉是诊手腕肺经太渊穴的脉搏来诊断全身。因为“脉气始于胃，输于脾、但百脉朝会于肺，需赖肺气的推动才能灌注于五脏六腑”，所以各脏腑病变在寸口脉上都有体现。
+
+> 寸口者，脉之大会，手太阴之脉动也。人一呼脉行三寸，一吸脉行三寸，呼吸定息，脉行六寸。人一日一夜，凡一万三千五百息，脉行五十度，周于身。漏水下百刻，营卫行阳二十五度，行阴亦二十五度，为一周也，故五十度复会于手太阴。寸口者，五脏六腑之所终始，故法取于寸口也。
+>
+> 《难经-一难》
 
 ##### 3、尺肤
 
@@ -100,15 +156,9 @@
 
 诊断总的原则是，无论望色、切脉还是舌诊，我们都需要先知道正常人的情况是如何的，比如正常的面色是怎样的？正常的脉象是怎样的？正常的舌像是怎样的？然后才能知常达变，通过病人面色、脉象和舌像与正常情况的区别，来分析人体气血失衡的虚实，并施以补泻的调理方案。然后再根据调理后面色、脉象、舌像的变化，来确定调理方向是否正确。如此反复，最终将脉象、舌像调理到正常为止。
 
-#### 3、判断精的状态
-
-前面关于精的章节介绍过判断方法，比如通过齿、发、骨、人中以及面部形态来判断精的多少。
-
-齿为骨之余，肾主骨，精生髓。所以精开始不足的时候，先从牙齿上体现出来，松动掉落。进一步不足的时候，从骨骼上体现出来，老年人弯腰驼背、容易骨折。到比较严重的时候出现大骨枯槁，出现肩垂，项倾，腰折，膝败，脊骨突起的现象，这就表明肾精已经衰弱到相当严重，预后不良。
 
 
-
-#### 4、判断严重情况
+## 3、判断严重情况
 
 望闻问切诊断的内容是比较多的，大家慢慢学习。这里先整理一些健康出现严重问题的情况，万一遇到这类问题，要做到心里有数。
 
@@ -222,99 +272,23 @@
 
 
 
-#### 5、小结
+## 4、总结
 
-精、气、神、血、水、形这几个方面都很重要。中医主要以调气为主，兼顾其他方面。
+通过外在表现判断内在精神气血的状态，就是中医的诊断，又叫四诊。这是中医非常重点的内容。
 
-中医对于神和先天之精的调节能力有限，因此需要先要评估一下精和神。如果两者任何一个缺失过多，都预后不好。如果精、神尚可，也没有大量失血、大汗失水以及剧烈外伤造成形体严重受损等特殊情况，则大部分疾病是以气为核心的，具体就是围绕着气是否充足、分配是否均匀、运转是否通畅的问题。即便使用安神、活血化瘀、祛湿痰等方法，目的还是让气更充足、更通畅，进而带动血、津液的充足与通畅。
+诊断的内容非常多，人的各种功能异常和部位表现都可以成为诊断依据，包括饮食、睡眠、寒热、大小便、汗、舌、脉、目、面、头、颈项、五官、胸腹、腰背、四肢、皮肉筋骨等等。这些内容散落于内经、伤寒等经典以及后世医家的书籍之中，需要反复研读、记忆、实践。
 
-前面的内容是对教材在基础概念上的一个补充，对于大家在学习中难以理解的问题做一些浅显的阐述。大家在掌握中医的总体思路后，落实到具体问题的时候，应该详细学习教材。光明中医教材的内容是非常精华的，是老一代中医毕生经验的无私总结。
+熟悉中医诊断的内容，可达到看透人体的效果，让人的健康状态无所遁形。不熟悉诊断，即便理论再熟，遇到问题的时候，依然感觉无从下手。
+
+为了让大家尽快熟悉诊断，我们把内经、伤寒、金匮等经典中提到的各种症状，做了一定程度的整理，让大家可以快速检索并查询到教材的相关论述。链接地址为：https://zuoye.gmzyh.com/showcat
+
+光明中医教材的内容是非常精华的，是老一代中医毕生经验的无私总结，所以大家必须认真学习教材。
 
 诊断方面，《概论》的四诊章节、《口诀》的四诊、《内经》的诊法、《伤寒论》的脉法，都很值得参考。
 
 具体病种方面，《内》、《外》、《妇》、《儿》、《眼》、《喉》对各病种的辨证经验非常有价值。
 
-用药方面，《本草》、《方剂》也值得参考。
-
-总之，大家对人体运转机制比较清晰后，对精、气、神、血、水、形几个方面的平衡与失衡有了深刻的理解，再参阅各种资料，可达到事半功倍的效果，对于辨证可以做到得心应手。
-
-针砭灸药属于技术范畴，只要辨证准确，对失衡的部位、性质、程度做到心里有数，具体的治疗手段可以随意选取，目的就是恢复平衡。
-
-### 2、分析思路
-
-人体的脏腑之间以及皮肉筋骨、四肢头部都有非常紧密的联系。因此在分析人体疾病的时候，要重视这种关系带来的影响。
-
-下面以肺为例说明：
-
-如果出现肺的功能异常，需要从几个角度考虑问题：
-
-一、肺本身是否有失衡的方面？
-
-二、肺所得到的资源供给是否有失衡？肺产生的浊气出路是否通畅？
-
-三、有紧密关系的器官是否对肺产生了影响？
-
-#### 肺自身失衡
-
-肺自身失衡要从其精、气、神、血、水、形的虚实角度考虑：
-
-精：肺中之精是否有不足的情况
-
-元气：肺中元气是否有不足？肺的元气是否过盛？
-
-神：肺魄是否不足？七情之中，悲伤肺，如果有悲伤情绪过度而伤肺的情况？
-
-天气：肺的天气是否不足？肺中天气是否受风、热、暑、湿、燥、寒的影响？
-
-血：肺中之血是否不足？肺中是否有淤血堵塞？
-
-水：肺中津液是否不足？是否有痰饮？
-
-形：肺的形质是否受损？是否有其它形质类的瘀堵，比如工作环境粉尘造成的矽肺病等等。
-
-#### 肺得到的外界资源之入和其产生浊气之出各自是否失衡：
-
-1、后天之本脾胃。脾胃供给给其它脏腑营养和水分。肺所需的精、营养、水都来自于脾胃的供给。如果脾胃衰弱，则肺得不到足够的原料，无法维持自身的能量供给，也无法完成血的合成。
-
-2、先天之本肾。肾给其它脏腑补充元气和阴精。肺工作使用的能量除了来自精血所化，还有肾产生的阳气的补充。如果肾的功能衰弱，则肺也无法获得足够的能量。
-
-3、脏腑之主心。心主神，管理五脏六腑之神。心神异常也可以影响肺的管理功能。
-
-4、肺与大肠的表里关系失衡。两者作为一对阴阳，通过经络通道有相互作用，如果大肠气失调，则与肺的配合失常，也可以引起肺的功能异常。内经说腑受脏之浊气，所以大肠也是肺中邪气的一个出路，如果肺中浊气不能通过大肠排出体外，可以造成肺中邪实的情况。
-
-#### 紧密相关的器官的影响
-
-1、五脏之间的五行生克关系失衡。从五行角度看，肺为金，与其它脏器的关系是克肝木、生肾水、被心火克、被脾土生。因此，生克关系的失衡也可以造成肺的功能异常。
-
-2、空间关系影响，比如肺与心空间距离接近，同为上焦，病邪可能互相传递。《温病条辨》中提到肺部热邪可以传入心包，即是因为两者相近。所以空间关系也是需要考虑的一个重要方面。
-
-3、肺与肺经有通道相连，肺经的病变可以传入肺脏。
-
-4、肺与皮肤对应关系。皮肤受风寒之类的外邪可以传到到肺。
-
-肺作为一个脏器，有很多指标需要平衡，上面只是列出中医常用的一些指标。
-
-
-
-### 3、如何判断
-
-每个脏腑都有一些通道与体表相连，将内部脏腑的状态呈现在体表。因此中医是根据体表情况推测脏腑的情况的，这就是中医的司外揣内。
-
-对于肺来讲，肺功能上主呼吸，开窍于鼻。所以呼吸的异常首先想到肺，比如咳、痰、喘等。脏腑皆有通道与舌相连，肺与心的状态共同对应在舌尖部位。在脉诊中，右手寸脉处为肺脉。另外肺与肺经相连，所以肺经沿线的情况与肺的关系紧密，如此等等。内部失衡的状况，在外部表现上有很多可以捕捉的信号，熟悉这些信号，就能娴熟的判断内在脏腑状态。
-
-比如肺阴虚的表现可能是干咳无痰，或痰少而粘，咽喉干痒，或声音嘶哑，形体消瘦，口燥咽干,午后潮热，五心烦热，两颧红赤，盗汗、甚则咳痰带血。
-
-肺阳虚可以是吐涎沫而不咳，不渴，遗尿、小便数等。
-
-肺中痰浊多的话，表现为咳嗽咯痰量多，色白而粘，容易咯出，或见气喘胸闷，喉间痰鸣等等。
-
-这是判断肺部本身的状态。
-
-如果肺的功能失常是由于外来资源不够引起的，比如说脾胃输送的资源不够。那么不单纯是肺得到的资源不够，其它脏腑也应该有资源不足的表现。据此可以判断病根在脾胃。如此一来，即使表面上是肺病，可能优先治疗的是脾胃。而脾胃调理好后，可能肺病就不治而愈或者大大减轻。
-
-> 如是脾病影响四脏，分治四脏而不愈者，当治脾。周子干《慎斋遗书》说：“诸病不愈，必寻到脾胃之中，方无一失。何以言之？脾胃一伤，四脏皆无生气，故疾病日多矣。万物从土而生，亦从土而归。‘补肾不若补脾’，此之谓也。
->
-> 《黄帝内经讲解-脾居中土，灌溉四傍，不独主时》
+用药方面，《本草》、《方剂》、《伤寒》、《金匮》、《温病》都需了解。
 
 
 
