--- a/ok/rm/rm07.md
+++ b/ok/rm/rm07.md
@@ -160,7 +160,7 @@
 
 ## 3、判断严重情况
 
-望闻问切诊断的内容是比较多的，大家慢慢学习。这里先整理一些健康出现严重问题的情况，万一遇到这类问题，要做到心里有数。
+诊断的内容是比较多的，大家慢慢学习。这里先整理一些健康出现严重问题的情况，万一遇到这类问题，要做到心里有数。
 
 > 若久病之人，本不能食，但突然反而暴食，这是中焦脾胃之气将绝的征象，称为“除中”，也是“回光返照”的一种表现。...
 >
@@ -274,13 +274,11 @@
 
 ## 4、总结
 
-通过外在表现判断内在精神气血的状态，就是中医的诊断，又叫四诊。这是中医非常重点的内容。
-
-诊断的内容非常多，人的各种功能异常和部位表现都可以成为诊断依据，包括饮食、睡眠、寒热、大小便、汗、舌、脉、目、面、头、颈项、五官、胸腹、腰背、四肢、皮肉筋骨等等。这些内容散落于内经、伤寒等经典以及后世医家的书籍之中，需要反复研读、记忆、实践。
+诊断的内容非常多，人的各种功能异常和部位表现都可以成为诊断依据，包括饮食、睡眠、寒热、大小便、汗、舌、脉、五官、面、头、颈项、胸腹、腰背、四肢、皮肉筋骨等等。这些内容散落于内经、伤寒等经典以及后世医家的书籍之中，需要反复研读、记忆、实践。
 
 熟悉中医诊断的内容，可达到看透人体的效果，让人的健康状态无所遁形。不熟悉诊断，即便理论再熟，遇到问题的时候，依然感觉无从下手。
 
-为了让大家尽快熟悉诊断，我们把内经、伤寒、金匮等经典中提到的各种症状，做了一定程度的整理，让大家可以快速检索并查询到教材的相关论述。链接地址为：https://zuoye.gmzyh.com/showcat
+为了让大家尽快熟悉诊断，我们把内经、伤寒、金匮等经典中提到的各种症状，做了一定程度的整理，让大家可以快速检索并查询到教材的相关论述。链接地址为：[https://zuoye.gmzyh.com/showcat](https://zuoye.gmzyh.com/showcat)
 
 光明中医教材的内容是非常精华的，是老一代中医毕生经验的无私总结，所以大家必须认真学习教材。
 
