--- a/ok/rm/rm07.md
+++ b/ok/rm/rm07.md
@@ -8,7 +8,7 @@
 
 几种要素中，精、神、元气能量、气态物质属于肉眼不可见的要素，称为无形之物。血、津液、形体属于肉眼可见的有形之物。无形之物难以观察测量，有形之物易于观察测量。有形与无形的物质相互作用，可以通过有形之物的状态反推无形之物的状态。这个原理就像风吹树木，风为无形的空气流动，其风力大小无法直接观察，但是我们可以根据树木被风吹后的倾斜程度，来判断风力的大小。
 
-中医中的脉诊，是通过感受动脉的跳动情况来了解人体气血的状态。原理是经络中的气态物质推动血脉中的血液跳动，因此血的运行状态可以体现气的运行状态。《桂本伤寒论》中说“脉乃气血先见”，即为此意。
+中医中的脉诊，是通过感受动脉的跳动情况来了解人体气血的状态。原理是经络中的无形的气态物质推动有形的血脉跳动，因此血的运行状态可以体现气的运行状态。《桂本伤寒论》中说“脉乃气血先见”，即为此意。
 
 > 脉乃气血先见，气血有盛衰，脏腑有偏胜。气血俱盛，脉阴阳俱盛；气血俱衰，脉阴阳俱衰。气独胜者，则脉强；血独盛者，则脉滑；气偏衰者，则脉微；血偏衰者，则脉涩；气血和者，则脉缓；气血平者，则脉平；气血乱者，则脉乱；气血脱者，则脉绝；阳迫气血，则脉数；阴阻气血，则脉迟；若感于邪，气血扰动，脉随变化，变化无穷，气血使之；病变百端，本原别之；欲知病源，当凭脉变；欲知病变，先揣其本，本之不齐，在人体躬，相体以诊，病无遁情。
 >
@@ -16,9 +16,11 @@
 
 2）内与外的关系
 
-人体内外有别，有形的物质虽然容易观察，但若隐藏在人体内部，则观察也是有难度的。但人是一个整体，内在的失衡往往有外在的表现，如果掌握了内在失衡和外在表现的关系，就可以通过外在表现判断内在状态，这就是中医“有诸内，必形诸外”、“司外而揣内”的道理。
+人体内外有别，有形的物质虽然容易观察，但若隐藏在人体内部，则观察也是有难度的。但人是一个整体，内在的失衡往往有外在的表现。外在表现包括饮食、睡眠、寒热、大小便、汗、舌像、脉像、五官、面、头、颈项、胸腹、腰背、四肢、皮肉筋骨等等。如果掌握了内在失衡和外在表现的关系，就可以通过外在表现判断内在状态，这就是中医“有诸内，必形诸外”、“司外而揣内”的道理。
 
-基于以上两点，中医通过四诊望、闻、问、切的手段，搜集人体外在、有形的表现，来推知人体内在、无形的状态。人体的目、面、舌、脉搏等部位就像汽车的故障指示灯一样，能够表示出内在指标的各种问题。为了防止单一的指示灯故障，所以我们需要尽量多的收集各种指示灯提示的信息，进行综合判断。如果多个指示灯都指明是同一故障，才能比较准确的确定故障位置和性质，这就是为什么要四诊合参。
+基于以上两点，中医通过四诊望、闻、问、切的手段，搜集人体外在、有形的表现，来判断人体内在、无形的状态，判断精、神、元气、气态物质、血、津液等要素的平衡或者失衡，这就是中医诊断的道理。
+
+人体的目、面、舌、脉搏等部位就像汽车的故障指示灯一样，能够表示出内在指标的各种问题。为了防止单一的指示灯故障，所以我们需要尽量多的收集各种指示灯提示的信息，进行综合判断。如果多个指示灯都指明是同一故障，才能比较准确的确定故障位置和性质，这就是为什么要四诊合参。
 
 > 前人云：有是症则有是病。对病人所反映出来的症状要不厌其多，资料越多越有利于辨证。因此，可以说诊察是辨证论治的起点。
 >
@@ -34,7 +36,7 @@
 
 神藏于心，外候在目。
 
-判断神的状态主要看两眼。眼光明亮、眼神灵活、目中润泽，目睛清莹，了了分明，此为神气充足。若是两目呆滞、目光晦暗、蒙混不清，是神气不足的表现。瞳仁散大，为肾精不足或将竭；瞳仁固定，为精绝神亡。
+判断神的状态主要看双目。目光明亮、眼神灵活、目中润泽，目睛清莹，了了分明，此为神气充足。若是两目呆滞、目光晦暗、蒙混不清，是神气不足的表现。瞳仁散大，为肾精不足或将竭；瞳仁固定，为精绝神亡。
 
 其次看神志是否清楚、反应是否灵活、说话是否有条理、发音是否清亮等等。
 
@@ -50,7 +52,7 @@
 
 从生殖角度，当男子溢精和女子月经来潮的功能出现问题的时候，标志肾精不足。
 
-从主骨角度看，齿为骨之余，肾主骨，精生髓。所以精开始不足的时候，先从牙齿上体现出来，松动掉落。进一步不足的时候，从骨骼上体现出来，老年人弯腰驼背、容易骨折。到比较严重的时候出现大骨枯槁，出现肩垂，项倾，腰折，膝败，脊骨突起的现象，这就表明肾精已经衰弱到相当严重，预后不良。
+从主骨角度看，齿为骨之余，肾主骨，精生髓。所以精开始不足的时候，先从牙齿上体现出来，松动掉落。进一步不足的时候，从骨骼上体现出来，老年人弯腰驼背、容易骨折。到比较严重的时候出现肩垂，项倾，腰折，膝败，脊骨突起的现象，称为大骨枯槁，表明肾精已经衰弱到相当严重，预后不良。
 
 脾主消化吸收，主肌肉。
 
@@ -72,11 +74,11 @@
 
 ##### 1、面色
 
-面色包括面部的颜色和光泽。一般来说面色光泽明润，为身体能量充足的表现，即使得病，问题也不大。
+面色包括面部的颜色和光泽。一般来说面色光泽明润，为身体气血充足的表现，即使得病，问题也不大。
 
 > 张三钖说：“五脏六腑之精华，上彰于明堂，...但当求其有神，虽困无害，神者色中光泽明亮是也，脉有胃气，同一理也。”
 
-为什么面部的色泽能反应人体能量的状态呢？因为人体脏腑及各大主要部位的能量都是通过经络联系在一起的，而全身的经络都与面部相联。所以人的面部就像汽车的指示灯一样，能够反应内在各个部位的健康状态与故障。
+为什么面部的色泽能反应人体气血的状态呢？因为人体脏腑与经络相联，全身的经络都与面部相联。所以人的面部就像汽车的指示灯一样，能够反应内在各个部位的健康状态与故障。
 
 > 十二经脉，三百六十五络，其血气皆上注于面而走空窍”
 >
@@ -148,7 +150,7 @@
 
 现在尺肤诊法已经很少使用了，所以资料不多。脉诊和色诊还比较常用。除此之外，舌诊也是常用的比较方面的诊断方法，可以参考《概论》望诊内容。
 
-脉诊与色诊有一个区别在于脉象更能体现当前的身体能量状态，而面色更能体现较长时间的身体状态。比如一个年轻健康的人初得病的时候，一般不易发生面色的变化，而脉象上往往有体现。而老年久病之人，面色不好，经过调理后，可能脉象很快能见到好转，但是面色的好转要经过一个相对长的时间。
+脉诊与色诊有一个区别在于脉象更能体现当前的身体能量状态，而面色更能体现较长时间的身体状态。年轻健康的人初得病的时候，一般不易发生面色的变化，而脉象上往往有体现。而老年久病之人，面色不好，经过调理后，可能脉象很快能见到好转，但是面色的好转要经过一个相对长的时间。
 
 > 面部色泽变化是五脏精气盛衰的具体表现，一般情况下新病不易引起色泽的变化。所以如果面色失于荣润，都是病久伤及五脏精气的表现，所以为久病。所谓“脉不夺”，是相对“色夺”而言的，意谓久病面部色泽的异常变化较脉象的异常变化更为明显，所以不能理解为久病没有脉象的异常变化。
 >
@@ -274,9 +276,7 @@
 
 ## 4、总结
 
-诊断的内容非常多，人的各种功能异常和部位表现都可以成为诊断依据，包括饮食、睡眠、寒热、大小便、汗、舌、脉、五官、面、头、颈项、胸腹、腰背、四肢、皮肉筋骨等等。这些内容散落于内经、伤寒等经典以及后世医家的书籍之中，需要反复研读、记忆、实践。
-
-熟悉中医诊断的内容，可达到看透人体的效果，让人的健康状态无所遁形。不熟悉诊断，即便理论再熟，遇到问题的时候，依然感觉无从下手。
+诊断的内容非常多，这些内容散落于内经、伤寒等经典以及后世医家的书籍之中，需要反复研读、记忆、实践。熟悉中医诊断的内容，可达到看透人体的效果，让人的健康状态无所遁形。不熟悉诊断，即便理论再熟，遇到问题的时候，依然感觉无从下手。
 
 为了让大家尽快熟悉诊断，我们把内经、伤寒、金匮等经典中提到的各种症状，做了一定程度的整理，让大家可以快速检索并查询到教材的相关论述。链接地址为：[https://zuoye.gmzyh.com/showcat](https://zuoye.gmzyh.com/showcat)
 
@@ -287,6 +287,16 @@
 具体病种方面，《内》、《外》、《妇》、《儿》、《眼》、《喉》对各病种的辨证经验非常有价值。
 
 用药方面，《本草》、《方剂》、《伤寒》、《金匮》、《温病》都需了解。
+
+
+
+## 题目
+
+1. 脉诊能够判断人体气血状态，原理是经络中的无形的----物质推动有形的血脉跳动。
+
+2. 中医通过四诊望、闻、问、切的手段，搜集人体-----、有形的表现，来判断人体-----、无形的状态，包括精、神、元气、气态物质、血、津液等要素的平衡或者失衡。
+
+      
 
 
 
