--- a/ok/rm/rm03-0.4.0.0.0.md
+++ b/ok/rm/rm03-0.4.0.0.0.md
@@ -32,7 +32,7 @@
 >
 > 《黄帝内经讲解-藏象学说-真气的生成和输布》
 
-> 由于生命活动的存在，不能—时一刻离开阳气，故后世医家把肾中阳气视为“立命之本”，称之为真阳，真火。可见阳气代表着人体具有阳性特征的精微物质，及其产生的热能和动力。它的物质基础是精，它的属性是火，来源于先天，但要靠后天的补充和营养。
+> 由于生命活动的存在，不能一时一刻离开阳气，故后世医家把肾中阳气视为“立命之本”，称之为真阳，真火。可见阳气代表着人体具有阳性特征的精微物质，及其产生的热能和动力。它的物质基础是精，它的属性是火，来源于先天，但要靠后天的补充和营养。
 >
 > 《内经》作者在此以天空和太阳的关系作比喻，形象地说明人体阳气的重要性。因为自然界的运动，万物的生长，都离不开太阳，它的光和热，为地球上一切生命活动提供了生存的条件。
 >
