--- a/ok/rm/rm03-0.1.0.0.0.md
+++ b/ok/rm/rm03-0.1.0.0.0.md
@@ -194,9 +194,9 @@
 
 阳虚就是元气的量低于正常范围，对应暖气例子里的炉火不足。火不足，则水烧不热，所以屋子寒凉。其表现有怕冷，舌色淡白等。调理方法是调大阀门，让火旺起来，就是补阳了。
 
-如果阴阳都不足，对应暖气的水和火的量都不足，则产生的热量不足以温暖房间，也叫气血不足。在人体上则会出现体温低，怕冷，舌体枯萎。因能量不足，各个器官的功能都开始下降。调理办法就是阴阳双补。
+如果阴阳都不足，对应暖气的水和火的量都不足，则产生的热量不足以温暖房间。在人体上则会出现体温低，怕冷，舌体枯萎。调理办法就是阴阳双补。
 
-以上只是人体平衡的基本原理。
+人体任何部位都涉及到能量与固、液、气三态的相互作用与转化，所以这是人体平衡的基本原理。
 
 进一步细化的话，需要参照天地自然章节的内容。所以我们先回顾一下自然界的平衡过程。
 
@@ -251,13 +251,13 @@
 
 形体也包括固液态物质和气态物质，也有自身的天地划分。固液态物质包括皮、肉、筋、骨、脉、髓、血、津液等等。气态物质则包括自然空气、血和水的蒸汽等等，这些气态物质用宗气、营气、卫气、脏腑之气等名词描述，详细见后面章节。
 
-在中医理论中，形体的一个重要特点就是液态物质由气态物质统帅，即血、水等液态物质的运行由气态物质推动和维护，称为“气为血之帅”。所以形体健康以气的正常运行为主要因素。而慢性疾病往往是以气的失常为先导，逐渐波及液态的津液和血，再延伸至固态的形体组织。
+在中医理论中，液态物质由气态物质统帅，即血、水等液态物质的运行由气态物质推动和维护，称为“气为血之帅”。所以形体健康以气的正常运行为主要因素。而慢性疾病往往是以气的失常为先导，逐渐波及液态的津液和血，再延伸至固态的形体组织。
 
 > “故治病以理气为先，而用药以通络为主。盖人之经络不通，则转输不捷，药不能尽其功。
 >
 > 韦协梦《医论三十篇》
 
-另外，因液态物质与气态物质可以互相转化，所以血也是气的一个来源，称为“血为气之母”。人在意外大量失血的时候，气也跟随减少，需要补血兼补气。但通常情况下，还是以气为先。
+另外，因液态物质与气态物质可以互相转化，所以血也是气的一个来源，称为“血为气之母”。人在意外大量失血的时候，气也跟随减少，需要补血兼补气。
 
 ##### 2.2.3、通道
 
@@ -265,7 +265,7 @@
 
 元气以三焦为通道。津液也以三焦为通道。血以脉为通道。气态物质以经络为通道。
 
-各种通道中，以经络通道为最重要，这是因为经络中运行的气态物质有统帅作用，可以带动其它各种要素的通畅。所以广义的经络系统包含了前面的三焦、血脉等通道。
+各种通道中，以经络通道为最重要，这是因为经络中运行的气态物质有统帅作用，可以带动血、津液的通畅。所以广义的经络系统包含了前面的三焦、血脉等通道。
 
 ##### 2.2.4、小结
 
