--- a/ok/rm/rm07.md
+++ b/ok/rm/rm07.md
@@ -104,6 +104,20 @@
 
 长度：脉搏每个波动与按脉手指接触的长度应适中，若长度较长，像琴弦一样，称为弦脉，代表肝胆气瘀滞，气不通则痛，所以常有痛症。若长度较短，像豆子一样，称为动脉，代表气血不通或者气血逆乱。
 
+这里弦脉是一个容易误解的脉，因其解释为像琴弦，容易被误解为有力。其实弦脉就是长度较长，与力度无关。
+
+> 春脉弦...其脉之来，**濡弱而长**，故曰弦
+>
+> 《难经-十五难》
+>
+> 紧脉是言其有力，弦脉是言其**挺直的形象**
+>
+> 《口诀浅释-切诊》
+>
+> 弦脉与紧脉似同而实异。**弦以象言**，紧则以力言。弦脉如弓弦，按之不移；紧脉则如转动的绳索，来往有力而不固定。
+>
+> 《伤寒论讲解-辨脉法》
+
 流速：脉的流动速度应适中，若过于流利，感觉圆滑，称为滑脉，代表气血涌动过快；若流动过于慢，往来艰涩、迟滞，如轻刀刮竹，代表气血流动慢。
 
 频率：脉搏正常频率应该是一呼一吸跳动四次，多于这个次数称之为数脉，代表有热；少于四次称为迟脉，代表有寒。
@@ -112,11 +126,11 @@
 
 以上力度、频率、高度、宽度、长度、流速代表了脉搏的几大维度指标，每个指标都有其正常范围，超过正常范围则为失衡，向上失衡为阳，向下失衡为阴。所以《桂本伤寒论-平脉法第二》说“**凡脉大、浮、数、动、滑，此名阳也；凡脉沉、涩、迟、弦、微，此名阴也**”，其中浮、沉是从高度辨阴阳，滑、涩从流速辨阴阳，数、迟从频率角度辨阴阳，动、弦从长度辨阴阳，大、微从宽度辨阴阳。
 
-这些指标排列组合可以形成非常多的组合脉象，有丰富的含义。比如脉数代表热，脉无力代表气虚，若两者兼有数而无力，则代表气虚而热；若是数而有力则代表实热。其它各类组合，如浮大数、浮数、沉涩、细数等等各有其含义。组合脉象的数量远远超出后世所说的二十八脉。二十八脉是常见脉的经验表达，其中有些为组合脉，比如革脉为沉、弦、大、实的组合；濡脉为浮、细、虚的组合；芤脉为浮、大、虚的组合。理解了脉的逻辑含义，学习二十八脉并不难。
+这些指标排列组合可以形成非常多的组合脉象，有丰富的含义。比如脉数代表热，脉无力代表气虚，若两者兼有数而无力，则代表气虚而热；若是数而有力则代表实热。其它各类组合，如浮大数、浮数、沉涩、细数等等各有其含义。组合脉象的数量远远超出后世所说的二十八脉。二十八脉只是常见病脉的简单总结，其中有些为组合脉，比如革脉为沉、弦、大、实的组合；濡脉为浮、细、虚的组合；芤脉为浮、大、虚的组合。理解了脉的逻辑含义，学习二十八脉并不难。
 
 总之脉象越接近正常波形，人越健康；远离正常波形，则不健康，严重的则代表死亡。中医中的各种绝脉，比如真脏脉、死脉、怪脉都是远离正常波形的脉象。
 
-各种脉象所代表的更多含义，因篇幅所限，不再介绍，教材的[《概论-切诊》](https://www.gmzy.org.cn/read/gl/gl05-0.4.0.0.0.md)、[《口诀浅释-切诊》](https://www.gmzy.org.cn/read/qs/qs01.md#_6)[《伤寒论讲解-辨脉法》](https://www.gmzy.org.cn/read/shl/shl01.01-1.2.0.0.0.md)讲的比较详细，大家可以参考。
+各种脉象所代表的更多含义，因篇幅所限，不再介绍。只要能认识到脉象是按照不同维度的阴阳进行组合的道理，脉诊就不难了。教材的[《概论-切诊》](https://www.gmzy.org.cn/read/gl/gl05-0.4.0.0.0.md)、[《口诀浅释-切诊》](https://www.gmzy.org.cn/read/qs/qs01.md#_6)[《伤寒论讲解-辨脉法》](https://www.gmzy.org.cn/read/shl/shl01.01-1.2.0.0.0.md)讲的比较详细，大家应认真学习。
 
 > **问曰：脉有阴阳，何谓也？答曰：凡脉大浮数动滑，此名阳也；脉沉涩弱弦微，此名阴也。凡阴病见阳脉者生，阳病见阴脉者死。**
 >
