--- a/ok/rm/rm01.md
+++ b/ok/rm/rm01.md
@@ -174,9 +174,9 @@
 
 ### 1.5、多方面的平衡：
 
-前面这个例子，重点谈的是温度平衡，其实一个房间实现卧室的功能，还有很多其他指标需要平衡。比如湿度、墙壁隔热度、采光度、地面光滑度等等。
+前面这个例子，重点谈的是温度平衡，其实一个房间实现卧室的功能，还有很多其他指标需要平衡，比如湿度、墙壁隔热度、采光度、地面光滑度等等，也就是有多个维度需要平衡。
 
-每个指标都和温度指标一样，有平衡范围和失衡范围。比如湿度就要有一个合适的范围，湿度过大变得潮湿或者湿度过小变得干燥，都会影响住人的功能。温度失衡，我们用“寒、热”来描述，但是湿度失衡，不能再用这种词，可以用“湿、燥”来描述湿度失衡。
+每个维度指标都和温度指标一样，有平衡范围和失衡范围。比如湿度就要有一个合适的范围，湿度过大变得潮湿或者湿度过小变得干燥，都会影响住人的功能。温度失衡，我们用“寒、热”来描述，但是湿度失衡，不能再用这种词，可以用“湿、燥”来描述湿度失衡。
 
 无论哪种指标的失衡，都离不开“虚、实”两种情况，因为所有的失衡，无非是“该有的太少“或者”不该有的太多“而已，再或者两者兼有的“虚实夹杂”情况。
 
@@ -185,6 +185,12 @@
 从“重要度”角度看，大部分指标都很重要，任何指标失衡，都会导致功能的下降，严重的会导致失去功能。所以即使一个指标是不敏感的，但是一旦遇到特殊情况，这个指标失衡了，依然要重视，将其调节回平衡。
 
 这里提到的多方面平衡，对于人也一样，温度平衡是人体平衡的一个重要方面，但是还有其他方面的平衡，比如身体有气的平衡、血的平衡、水的平衡，对应就有气虚、气滞、血虚、血淤、津液虚、痰饮等各方面的失衡，这些要等后面介绍完人体的运转机理后才能解释。
+
+在光明教材《概论》的阴阳章节，谈到中医用阴阳概念阐述人体的部位、生理、病理、诊断、方药等内容，就是指这种多维度的平衡。
+
+> 阴阳学说，贯穿于中医学理论和临床体系的各个方面，用以认识和阐述人体的形体、脏腑、经络、生命过程、疾病过程、以及辨证治疗等等。
+>
+> 《中医药学概论-阴阳学说在中医学中的应用》
 
 ### 1.6、平衡要素：
 
@@ -209,8 +215,6 @@
 敏感指标：温度
 
 不敏感：墙壁隔热度、采光度。。。。
-
-
 
 功能、载体、指标及其波动范围，是我们谈阴阳平衡需要关注的三个要素。
 
@@ -272,7 +276,11 @@
 
 ![](img/fangjian_huafen.svg)
 
-视不同的情况可以有不同的分法，比如一年可以分为4季，也可以分为12月、24节气、365日等等。
+四分法中，偏阳的一面可以按照比例再分阴阳，称为“阳中阴”与“阳中阳”，偏阴的一面也是同理。
+
+六分法中，阴阳两面各自三分，则用少阳、阳明、太阳、太阴、少阴、厥阴的命名方法。
+
+不同的情况可以有不同的分法，比如一年可以分为4季，也可以分为12月、24节气、365日等等。选择合适的划分方法是为了方便观察、分析与调节。
 
 就像踢足球要11个人，打排球要6个人、打篮球要5个人一样，不管用哪种分法，最终都是完成了阴阳往来平衡的目的。
 
