--- a/ok/rm/rm03-0.1.0.0.0.md
+++ b/ok/rm/rm03-0.1.0.0.0.md
@@ -263,19 +263,19 @@
 
 脏腑与形体之间的资源交互要有通道。元气、血、津液、气态物质各有其通道。
 
-元气以三焦为通道。津液也以三焦为通道。血以脉为通道。气态物质以经络为通道。
+津液以三焦为通道，所以三焦称为水道。血以血管为通道，所以血管也可以叫血脉。气态物质以经络为通道，所以经络也可以叫气脉。
+
+元气以三焦为通道，所以三焦也是元气通道。另外，元气是能量，作用于血、津液、气态物质，所以也可以说各种通道都携带了元气。
 
 各种通道中，以经络通道为最重要，这是因为经络中运行的气态物质有统帅作用，可以带动血、津液的通畅。所以广义的经络系统包含了前面的三焦、血脉等通道。
 
 ##### 2.2.4、小结
 
-脏腑与形体是人体比较大的一对阴阳关系。两者比较而言，脏腑对外界进入人体的物质进行处理，转化为精气血并存储。这一过程以固液态物质为主，所以脏腑为阴，像地，以五行划分，即木、火、土、金、水；形体接受脏腑传输来的各种资源，进行使用消耗，这一过程以气态物质为主导，所以形体为阳，像天，以六气划分，也即前面天地章节所说的厥阴风木、少阳相火、少阴君火、太阴湿土、阳明燥金、太阳寒水。
+脏腑与形体是人体比较大的一对阴阳关系。脏腑为阴，形体为阳。
 
-此外，内在脏腑和外在形体两者又有各自的天地之气。
+脏腑为阴，负责将外界的饮食、空气转化为精气血并存储，像地，以五行划分，即木、火、土、金、水；其中脏为阴中之阴，腑为阴中之阳。因脏腑以固液态物质为根本，所以阴中之阴的脏为主。
 
-脏腑的天地之气中，地气主导天气，以固液态的形质地气为根本。而脏腑之间腑为阳，天气偏多，脏为阴，地气偏多，所以以五脏为重；
-
-形体的天地之气中，天气主导地气。这是因为气态物质推动津血到达全身，以营养皮肉筋骨等组织，所以以六经天气为根本。
+形体为阳，接受脏腑传输来的各种资源，进行使用消耗，像天，以六气划分，即厥阴风木、少阳相火、少阴君火、太阴湿土、阳明燥金、太阳寒水。其中气态物质为阳中之阳，津血皮肉筋骨为阳中之阴。因形体以气态物质为主导，所以阳中之阳的气态物质为主。
 
 人体生病主要有外感病和内伤病。外感病是外界寒暑之气侵袭形体肌表，使其失衡并由外向内发展。内伤病是各种原因先造成脏腑失衡，并由内向外发展。
 
