update  ok/bc/bc03-0.1.1.0.0.md.

--- a/ok/bc/bc03-0.1.1.0.0.md
+++ b/ok/bc/bc03-0.1.1.0.0.md
@@ -14,4 +14,4 @@
 石膏煅后，清解之性变为收敛，研末外用，有生肌敛疮之功。用于疮疡溃而不敛、创伤、水火烫伤及湿疹等，常与铅丹或黄柏、青黛等制散外用。
 至于《备要》所言寒水石，应为硫酸盐类矿物芒硝的晶体，但近代寒水石的药材商品，有红石膏与方解石二种，前者北方多用，后者南方多用。
 
-【用量用法】16~60克，大挤量可用至150克，煎服。外用适量。清热泻火生用，生肌敛疮煅用，入汤剂宣打碎先煎。
+【用量用法】16~60克，大剂量可用至150克，煎服。外用适量。清热泻火生用，生肌敛疮煅用，入汤剂宣打碎先煎。
