--- a/ok/bc/bc03-0.1.1.0.0.md
+++ b/ok/bc/bc03-0.1.1.0.0.md
@@ -4,7 +4,7 @@
 
 【讲解】	(1)日晡潮热:指下午3〜5时左右发热，或热度增高。
 
-石膏功专清解，内清肺胃之火，外解肌肤之热。为单斜晶系含谁硫酸钙矿石。除去杂质碾碎，研細。生用或煅用。
+石膏功专清解，内清肺胃之火，外解肌肤之热。为单斜晶系含谁硫酸钙矿石。除去杂质碾碎，研细。生用或煅用。
 
 本品辛甘大寒。人肺、胃二经。味辛能散，大寒清热，外能解肌肤之热，内能清肺胃之火,于清热泻火中而具热退津生之意，除烦止渴之能，故为清解肺胃气分实热之要药。凡温病邪在气分，壮热烦渴，脉洪大等实热亢盛之证。及邪热深入，波及营血，壮热不退而发斑疹之气血两燔，或肺热喘咳，或胃火上炎的头痛、牙痛和齿龈肿痛等证，皆为主药，正如《本草经疏 》所载：甄权用以治伤寒头痛如裂，壮热如火；东垣用以治胃热肺热，散阳邪，
 缓脾益气者，邪热去则脾得缓而无气，回也；洁古又谓止阳明经头痛，发热恶寒,曰哺潮热，大渴引饮，中暑及牙痛者，无非邪在阳明经所生病也，理阳明而蔑不济矣。足阳明主肌肉，手太阴主皮毛，故又为发斑、发疹之要品。然系大寒之品，非实热证者不宜用，脾胃虚寒及阴虚内热者忌服。
