--- a/ok/nj/nj72.md
+++ b/ok/nj/nj72.md
@@ -2,7 +2,7 @@
 
 
 
-曰：经言，肺之原，出于太渊；心之原，出于太陵；肝之原，出于太冲，脾之原，出于大白；肾之原，出于太溪；少阴之原，出于兑骨；胆之原，出于丘墟；胃之原，出于冲阳；三焦之原，出于阳池；膀胱之原，出于京骨；大肠之原，出于合谷；小肠之原，出于腕骨。十二经皆以俞为原者，何也？
+曰：经言，肺之原，出于太渊；心之原，出于大陵；肝之原，出于太冲，脾之原，出于太白；肾之原，出于太溪；少阴之原，出于兑骨；胆之原，出于丘墟；胃之原，出于冲阳；三焦之原，出于阳池；膀胱之原，出于京骨；大肠之原，出于合谷；小肠之原，出于腕骨。十二经皆以俞为原者，何也？
 
 
 然：五脏俞者，三焦之所行，气之所留止也。
