--- a/ok/rm/rm02.md
+++ b/ok/rm/rm02.md
@@ -608,7 +608,7 @@
 >
 > 《素问•八正神明论》
 
-> **人与天地相参也，与日月相应也(1)。故月满则海水西盛，人血气积，肌肉充，皮肤致，毛发坚，腠理郄，烟垢著(2)，当是之时，虽遇贼风，其入浅不深(3)；至其月郭空，则海水东盛，人气血虚，其卫气去，形独居，肌肉减，皮肤纵，腠理开，毛发残，瞧理薄，烟垢落(4)，当是之时，遇贼风，则其入深，其病人也卒暴(5)。**
+> **人与天地相参也，与日月相应也(1)。故月满则海水西盛，人血气积，肌肉充，皮肤致，毛发坚，腠理郄，烟垢著(2)，当是之时，虽遇贼风，其入浅不深(3)；至其月郭空，则海水东盛，人气血虚，其卫气去，形独居，肌肉减，皮肤纵，腠理开，毛发残，腠理薄，烟垢落(4)，当是之时，遇贼风，则其入深，其病人也卒暴(5)。**
 >
 > 《灵枢•岁露》
 
