--- a/ok/fjx/fjx10-0.9.0.0.0.md
+++ b/ok/fjx/fjx10-0.9.0.0.0.md
@@ -4,7 +4,7 @@
 
 〔煎服法〕上㕮咀，每服四钱，水一盏半，生姜五片，枣子一枚，煎至七分，去滓温服，不拘时候（现代用法：加入生姜五片，大枣一枚，水煎服）。
 
-〔讲解〕水肿之病，大体可分阴水，阳水两大类。阳水属实热，病位在表；阴水属虚寒，病位在里。本方是治序阴水证的重要方剂。阴水的形成，乃缘於脾肾阳虚，阳不化水，水气内停所致，其病的特点是，全身浮肿，以腰以下为甚，手足不温，食少便溏。故证以脾阳虚为主。治宜温阳健脾，行气利水之法。方中以附子、干姜为君药，温养脾肾，扶阳抑阴。白术、茯苓、木瓜为臣药。白术、茯苓是一组对药，专治脾虚生湿而致的各种病证。白术苦温健脾燥湿；茯苓甘淡渗利水湿，水湿祛除，脾运自复，故二味相伍，对湿困脾土之证，功效尤佳。然脾虚，则肝易以强凌弱，尅犯脾土，故方中用木瓜酸温，于土中泻木，以使肝和，且兼有祛湿利水之效。气为水之帅，气滞则水停，气行则水行，水行则湿化，故配一组理气之品，如厚朴、木香、大腹皮、草果下气导滞，化湿利水，共为佐药。甘草调和诸药，与生姜、大枣相配伍，又可益脾温中，共为使药。诸药相合，温脾暖肾，行气利水。然本方以温补脾土之功偏著，确有实脾则能治水之功，故名实脾散。
+〔讲解〕水肿之病，大体可分阴水，阳水两大类。阳水属实热，病位在表；阴水属虚寒，病位在里。本方是治疗阴水证的重要方剂。阴水的形成，乃缘於脾肾阳虚，阳不化水，水气内停所致，其病的特点是，全身浮肿，以腰以下为甚，手足不温，食少便溏。故证以脾阳虚为主。治宜温阳健脾，行气利水之法。方中以附子、干姜为君药，温养脾肾，扶阳抑阴。白术、茯苓、木瓜为臣药。白术、茯苓是一组对药，专治脾虚生湿而致的各种病证。白术苦温健脾燥湿；茯苓甘淡渗利水湿，水湿祛除，脾运自复，故二味相伍，对湿困脾土之证，功效尤佳。然脾虚，则肝易以强凌弱，尅犯脾土，故方中用木瓜酸温，于土中泻木，以使肝和，且兼有祛湿利水之效。气为水之帅，气滞则水停，气行则水行，水行则湿化，故配一组理气之品，如厚朴、木香、大腹皮、草果下气导滞，化湿利水，共为佐药。甘草调和诸药，与生姜、大枣相配伍，又可益脾温中，共为使药。诸药相合，温脾暖肾，行气利水。然本方以温补脾土之功偏著，确有实脾则能治水之功，故名实脾散。
 
 本方温阳行气之力较强，扶正益气之力较弱，故对阴水证中寒气滞之肿为宜；对气少声微，正气虚极者，不可单纯投本方。
 
