--- a/ok/bc/bc07-0.1.0.0.0.md
+++ b/ok/bc/bc07-0.1.0.0.0.md
@@ -20,6 +20,6 @@
 
 本品辛甘而热，有毒。入心、肾、脾三经。走而不守，具纯阳之性，能上助心阳以通脉，中温脾阳以健运，下补肾阳以益火，外固卫阳以祛寒，所谓“开辟群阴，迎阳归舍；果有真寒，无所不治”。即是此意。故亡阳欲脱，脉微欲绝者用之，可以回阳复脉；肾阳不足，阳痿滑精，腰膝冷弱者用之，可以补火助阳；脾阳不振，脘腹冷痛，水肿尿少者用之，可以温阳化气；风寒湿痹，疼痛麻木者用之，可以祛寒止痛。总之，附子既能追复散失之亡阳，又能资助亏损之元阳，并可逐表里之寒湿。故《本草求真》曰：其入补气药中，则追散失之元阳；入发散药中，则能开胰理以逐在表之风寒；入温暖药中，则能祛在里之寒湿。故一切沉寒痼冷之证，均可用之。
 
-【临证应用】附子配干姜，可增强回阳救逆之功，以治亡阳证，四肢厥逆，脉微欲绝者，如四逆汤；配人参，可加强扶阳益气之效，以治阳衰气脱，大汗淋漓，气短喘息者，如参附汤；配肉桂，可补阳益火，以治肾阳不足，命门火衰，阳痿尿频，畏寒肢冷，腰痿脚弱等证，如桂附八味丸；配白术，可温脾燥湿，以治脾阳不振，寒湿内阻，脘腹冷痛，大便溏泄，如附子理中丸；配桂枝，能温经止痛，以治痹痛，周身关节疼痛之证，如桂枝附子汤；配熟地，可补阳滋阴，以治阴阳两亏之证；配茯苓，可助阳化气，以治脾肾阳虚，水湿内停，小便不利，肢体浮肿者，如：真武汤；配黄茂，可温阳固表，以治阳衰而表不固，冷汗不止者，如芪附汤；配麻黄可助阳发表，以治素体阳虚，外感风寒之证，如麻黄附子细辛汤。若逢寒热错杂之证，亦可与寒凉药同用，如：配黄连，可扶阳泻热，以治心下痞而恶寒汗出者，如附子泻心汤；配大黄，可温阳通便，用治阴寒积聚，腹痛便秘，如大黄附子汤。
+【临证应用】附子配干姜，可增强回阳救逆之功，以治亡阳证，四肢厥逆，脉微欲绝者，如四逆汤；配人参，可加强扶阳益气之效，以治阳衰气脱，大汗淋漓，气短喘息者，如参附汤；配肉桂，可补阳益火，以治肾阳不足，命门火衰，阳痿尿频，畏寒肢冷，腰痿脚弱等证，如桂附八味丸；配白术，可温脾燥湿，以治脾阳不振，寒湿内阻，脘腹冷痛，大便溏泄，如附子理中丸；配桂枝，能温经止痛，以治痹痛，周身关节疼痛之证，如桂枝附子汤；配熟地，可补阳滋阴，以治阴阳两亏之证；配茯苓，可助阳化气，以治脾肾阳虚，水湿内停，小便不利，肢体浮肿者，如：真武汤；配黄芪，可温阳固表，以治阳衰而表不固，冷汗不止者，如芪附汤；配麻黄可助阳发表，以治素体阳虚，外感风寒之证，如麻黄附子细辛汤。若逢寒热错杂之证，亦可与寒凉药同用，如：配黄连，可扶阳泻热，以治心下痞而恶寒汗出者，如附子泻心汤；配大黄，可温阳通便，用治阴寒积聚，腹痛便秘，如大黄附子汤。
 
 【用量用法】3—15克。入汤剂须先煎30—60分钟，以减其毒性。附子性燥烈有毒，故非阴盛阳衰者不宜服用。阴虚内热患者及孕妇忌用。反半夏、瓜篓、白蔹、白芨、贝母。畏犀角。
