--- a/ok/rm/rm03-0.4.0.0.0.md
+++ b/ok/rm/rm03-0.4.0.0.0.md
@@ -246,7 +246,7 @@
 
 #### 2.1、元气是否是气态物质？
 
-元气是人体的初始动力，是能量来源。自然界的初始动力来自光照，烧水过程的初始动力来自木材燃烧的火焰。所以不同事物的初始动力的形式有所不同，共同特点是都能提供能量。人体的能量按照现代科学的研究是来自有机物的化学能。中医中的元气是人体的起始能量，其形式是到底气态、电、热辐射或者其它某种未知的能量形式还不确定。很多中医认为元气就是一种气态物质，但是此处为了体现其初始能量的独特特性，将其单独介绍。
+元气是人体的初始动力，是能量来源。自然界的初始动力来自光照，烧水过程的初始动力来自木材燃烧的火焰。所以不同事物的初始动力的形式有所不同，共同特点是都能提供能量。人体的能量按照现代科学的研究是来自有机物的化学能。中医中的元气是人体的起始能量，其形式是到底气态、电、热辐射或者其它某种未知的能量形式还不确定。很多中医认为元气就是一种气态物质，除了行于三焦外，也行于经络，但是此处为了体现其初始能量的独特特性，将其单独介绍。
 
 > 阳气代表着人体具有阳性特征的**精微物质**，及其**产生的热能和动力**。它的物质基础是精，它的属性是火，来源于先天，但要靠后天的补充和营养。
 >
@@ -254,15 +254,13 @@
 
 #### 2.2、气血在身体中的分配：
 
- 气的分配按照三阴三阳在身体中进行配置，按照内经所说：
+ 气态物质与血的分配按照三阴三阳区域进行配置，按照内经所说：
 
 太阳多血少气，少阴少血多气
 
 阳明多气多血，少阳少血多气，
 
 厥阴多血少气，太阴多气少血
-
-目前看，三阴三阳各自气血分配的多少说法不统一。只能说认识到三阴三阳的气血分配有差异，也就是其常态各自有异。	
 
 > **夫人之常数，太阳常多血少气，少阴常少血多气。阳明常多气多血，少阳常少血多气，厥阴常多血少气。太阴常多气少血，此天之常数。**
 >
