--- a/ok/rm/rm07.md
+++ b/ok/rm/rm07.md
@@ -6,9 +6,9 @@
 
 1）有形与无形的关系
 
-几种要素中，精、神、元气能量、气态物质属于肉眼不可见的要素，称为无形之物。血、津液、形体属于肉眼可见的有形之物。无形之物难以观察测量，有形之物易于观察测量。有形与无形的物质相互作用，可以通过有形之物的状态反推无形之物的状态。这个原理就像风吹树木，风为无形的空气流动，其风力大小无法直接观察，但是我们可以根据树木被风吹后的倾斜程度，来判断风力的大小。
+几种要素中，精、神、元气能量、气态物质属于肉眼不可见的要素，称为无形之物。血、津液、形体属于肉眼可见的有形之物。无形之物难以观察测量，有形之物易于观察测量。有形与无形的物质相互作用，可以通过有形之物的状态反推无形之物的状态。这个原理就像风吹旗子，风为无形的空气流动，其风力大小无法直接观察，但是我们可以根据旗子被风吹后的表现，来判断风力的大小。
 
-中医中的脉诊，是通过感受动脉的跳动情况来了解人体气血的状态。原理是经络中的无形的气态物质推动有形的血脉跳动，因此血的运行状态可以体现气的运行状态。《桂本伤寒论》中说“脉乃气血先见”，即为此意。
+中医中的脉诊，是通过感受动脉的跳动情况来了解气血的状态。原理是经络中的无形的气态物质推动有形的血脉跳动，因此血的运行状态可以体现气的运行状态。《桂本伤寒论》中说“脉乃气血先见”，即为此意。
 
 > 脉乃气血先见，气血有盛衰，脏腑有偏胜。气血俱盛，脉阴阳俱盛；气血俱衰，脉阴阳俱衰。气独胜者，则脉强；血独盛者，则脉滑；气偏衰者，则脉微；血偏衰者，则脉涩；气血和者，则脉缓；气血平者，则脉平；气血乱者，则脉乱；气血脱者，则脉绝；阳迫气血，则脉数；阴阻气血，则脉迟；若感于邪，气血扰动，脉随变化，变化无穷，气血使之；病变百端，本原别之；欲知病源，当凭脉变；欲知病变，先揣其本，本之不齐，在人体躬，相体以诊，病无遁情。
 >
@@ -16,7 +16,7 @@
 
 2）内与外的关系
 
-人体内外有别，有形的物质虽然容易观察，但若隐藏在人体内部，则观察也是有难度的。但人是一个整体，内在的失衡往往有外在的表现。外在表现包括饮食、睡眠、寒热、大小便、汗、舌像、脉像、五官、面、头、颈项、胸腹、腰背、四肢、皮肉筋骨等等。如果掌握了内在失衡和外在表现的关系，就可以通过外在表现判断内在状态，这就是中医“有诸内，必形诸外”、“司外而揣内”的道理。
+人体内外有别，有形的物质虽然容易观察，但若隐藏在人体内部，则观察也是有难度的。但人是一个整体，内在的失衡必有外在的表现。外在表现包括饮食、睡眠、寒热、大小便、汗、舌像、脉像、五官、面、头、颈项、胸腹、腰背、四肢、皮肉筋骨等等。如果掌握了内在失衡和外在表现的关系，就可以通过外在表现判断内在状态，这就是中医“有诸内，必形诸外”、“司外而揣内”的道理。
 
 基于以上两点，中医通过四诊望、闻、问、切的手段，搜集人体外在、有形的表现，来判断人体内在、无形的状态，判断精、神、元气、气态物质、血、津液等要素的平衡或者失衡，这就是中医诊断的道理。
 
@@ -66,13 +66,9 @@
 
 #### 3、判断气血的状态
 
-中医判断气血的内容最多。这里简单介绍：面色、脉象、尺肤等几种方法的大概原则，算是索引，具体还是要参考教材诊断的内容。
+中医判断气血的内容最多。这里简单介绍：面色、脉象、舌诊等几种方法的大概原则，算是索引，具体要参考教材诊断的内容。
 
-> **夫色脉与尺之相应也，如桴鼓影响之相应也，不得相失也，此亦本末根叶之出候也，故根死则叶枯矣⑴。色脉形肉不得相失也，故知一则为工，知二则为神，知三则神且明矣（2）。**
->
-> 《灵枢•邪气脏腑病形》
-
-##### 1、面色
+##### 3.1、面色
 
 面色包括面部的颜色和光泽。一般来说面色光泽明润，为身体气血充足的表现，即使得病，问题也不大。
 
@@ -90,7 +86,7 @@
 >
 > [《口诀浅释》](https://www.gmzy.org.cn/read/qs/qs01.md#_2)
 
-##### 2、脉象
+##### 3.2、脉象
 
 诊脉是通过人体一些部位的动脉跳动形态变化来判断人体内各种要素的失衡状态。
 
@@ -122,23 +118,23 @@
 
 频率：脉搏正常频率应该是一呼一吸跳动四次，多于这个次数称之为数脉，代表有热；少于四次称为迟脉，代表有寒。
 
-高度：脉的高低是指轻按为高，又叫浮取，离皮肤近；重按为低，又叫沉取，离骨近；不轻不重在两者之间为中取；无论浮、中、沉，脉搏的感觉应相差不大。如果轻按的脉搏比重按的时候明显，称为浮脉，代表气血聚于表层。若重按的脉搏更明显，称为沉脉，代表气血聚集于身体里层。
+高度：脉的高低是指轻按为高，又叫浮取，离皮肤近；重按为低，又叫沉取，离骨近；不轻不重在两者之间为中取；正常情况下，无论浮、中、沉，脉搏的感觉应相差不大。如果轻按的脉搏比重按的时候明显，称为浮脉，代表气血聚于表层。若重按的脉搏更明显，称为沉脉，代表气血聚集于里层。
 
 以上力度、频率、高度、宽度、长度、流速代表了脉搏的几大维度指标，每个指标都有其正常范围，超过正常范围则为失衡，向上失衡为阳，向下失衡为阴。所以《桂本伤寒论-平脉法第二》说“**凡脉大、浮、数、动、滑，此名阳也；凡脉沉、涩、迟、弦、微，此名阴也**”，其中浮、沉是从高度辨阴阳，滑、涩从流速辨阴阳，数、迟从频率角度辨阴阳，动、弦从长度辨阴阳，大、微从宽度辨阴阳。
-
-这些指标排列组合可以形成非常多的组合脉象，有丰富的含义。比如脉数代表热，脉无力代表气虚，若两者兼有数而无力，则代表气虚而热；若是数而有力则代表实热。其它各类组合，如浮大数、浮数、沉涩、细数等等各有其含义。组合脉象的数量远远超出后世所说的二十八脉。二十八脉只是常见病脉的简单总结，其中有些为组合脉，比如革脉为沉、弦、大、实的组合；濡脉为浮、细、虚的组合；芤脉为浮、大、虚的组合。理解了脉的逻辑含义，学习二十八脉并不难。
-
-总之脉象越接近正常波形，人越健康；远离正常波形，则不健康，严重的则代表死亡。中医中的各种绝脉，比如真脏脉、死脉、怪脉都是远离正常波形的脉象。
-
-各种脉象所代表的更多含义，因篇幅所限，不再介绍。只要能认识到脉象是按照不同维度的阴阳进行组合的道理，脉诊就不难了。教材的[《概论-切诊》](https://www.gmzy.org.cn/read/gl/gl05-0.4.0.0.0.md)、[《口诀浅释-切诊》](https://www.gmzy.org.cn/read/qs/qs01.md#_6)[《伤寒论讲解-辨脉法》](https://www.gmzy.org.cn/read/shl/shl01.01-1.2.0.0.0.md)讲的比较详细，大家应认真学习。
 
 > **问曰：脉有阴阳，何谓也？答曰：凡脉大浮数动滑，此名阳也；脉沉涩弱弦微，此名阴也。凡阴病见阳脉者生，阳病见阴脉者死。**
 >
 > 《伤寒论-辨脉法》
 
+这些指标排列组合可以形成非常多的组合脉象，有丰富的含义。比如脉数代表热，脉无力代表气虚，若两者兼有，数而无力，则代表气虚而热；若是数而有力则代表实热。其它各类组合，如浮大数、浮数、沉涩、细数等等各有其含义。组合脉象的数量远远超出后世所说的二十八脉。二十八脉只是常见病脉的总结，其中有些为组合脉，比如革脉为沉、弦、大、实的组合；濡脉为浮、细、虚的组合；芤脉为浮、大、虚的组合。
+
 > 此言者，非有六脉俱动也，谓浮、沉、长、短、滑、涩也。浮者阳也，滑者阳也，长者阳也；沉者阴也，短者阴也，涩者阴也。所谓一阴一阳者，谓脉来沉而滑也，一阴二阳者，谓脉来沉滑而长也，一阴三阳者，谓脉来浮滑而长，时一沉也；所谓一阳一阴者，谓脉来浮而涩也；一阳二阴者，谓脉来长而沉涩也；一阳三阴者，谓脉来沉涩而短，时一浮也。各以其经所在，名病顺逆也。
 >
 > 《难经-四难》
+
+总之脉象越接近正常波形，人越健康；远离正常波形，则不健康，严重的则代表死亡。中医中的各种绝脉，比如真脏脉、死脉、怪脉都是远离正常波形的脉象。理解脉的逻辑含义，能认识到脉象是按照不同维度的阴阳进行组合的道理，学习脉诊并不难。
+
+各种脉象所代表的更多含义，参考教材的[《概论-切诊》](https://www.gmzyjc.com/read/gl/gl05-0.4.0.0.0.md)、[《口诀浅释-切诊》](https://www.gmzyjc.com/read/qs/qs01.md#_6)、[《伤寒论讲解-辨脉法》](https://www.gmzyjc.com/read/shl/shl01.01-1.2.0.0.0.md)大家应认真学习。
 
 寸口脉是诊手腕肺经太渊穴的脉搏来诊断全身。因为“脉气始于胃，输于脾、但百脉朝会于肺，需赖肺气的推动才能灌注于五脏六腑”，所以各脏腑病变在寸口脉上都有体现。
 
@@ -146,29 +142,29 @@
 >
 > 《难经-一难》
 
-##### 3、尺肤
+##### 3.3、舌象
 
-尺肤是指由腕至肘部的皮肤。内经认为诊察尺肤的紧急或弛缓，高起或瘦削，滑润或涩滞等状况，以及肌肉的坚实或脆弱，可以帮助诊断疾病
+舌象也是一种重要的诊断方法。舌象主要包括舌体与舌苔两部分，舌体就是舌的肉质部分，舌苔是舌头上的那一层苔。舌象可以反应人体的气血状态，舌体代表固液态的地气，舌苔代表天气。
 
-> **尺肤滑，其淖泽者，风也（1）。尺肉弱者，解亦，安卧脱肉者，寒热不治(2)；尺肤滑而泽脂者，风也；尺肤涩者，风痹也(3)；尺肤粗如枯鱼之鳞者，水泱泆饮也（4）。尺肤热甚，脉盛躁者，病温也，其脉盛而滑者，病且出也(5)。尺肤寒，其脉小者，泄，少气（6）。尺肤炬然，先热后寒者，寒热也。尺肤先寒，久大之而热者，亦寒热也（7）。**
->
-> 《灵枢•论疾诊尺》
->
-> 尺部肌肉松软柔弱，是阴阳两虚的表现。阴精不足，则肌肉失养，阳气不足，则肌肉不用。所以不但肌肉松软柔弱，而且身体困倦，四肢懈怠。
->
-> 如果阴阳受损严重，阳气虚亏，则昏沉嗜睡，阴寒内生而畏寒；阴精虚亏，肌肉失养，则肌肉瘦削如失，虚阳上亢则发热，病情凶险：不易治疗。
+体内的精、元气、血、津液等要素正常时，体现在舌象为：舌体颜色粉红、质地润泽、柔软灵活、无裂纹、厚薄适中、边缘光滑；舌苔颜色淡白、干湿适中、薄薄一层、全面覆盖舌体。
 
-详见[《黄帝内经讲解-诊法学说-诊尺肤》](https://www.gmzy.org.cn/read/hdnjs/hdnj08-0.2.16.0.0.md)
+反之各要素有失衡时，在舌象上有对应变化，比如气热则舌苔黄、血热则舌体红、津血亏则有裂纹等等。
+
+详见《[中医药学概论-望舌](https://www.gmzyjc.com/read/gl/gl05-0.1.4.0.0.md)》、《[口诀浅释-吴坤安察舌辨证歌](https://www.gmzyjc.com/read/qs/qs01_01.md#2)》
+
+舌诊是一种简便的诊断方法，每个人都应该掌握。
 
 ##### 小结
-
-现在尺肤诊法已经很少使用了，所以资料不多。脉诊和色诊还比较常用。除此之外，舌诊也是常用的比较方面的诊断方法，可以参考《概论》望诊内容。
 
 脉诊与色诊有一个区别在于脉象更能体现当前的身体能量状态，而面色更能体现较长时间的身体状态。年轻健康的人初得病的时候，一般不易发生面色的变化，而脉象上往往有体现。而老年久病之人，面色不好，经过调理后，可能脉象很快能见到好转，但是面色的好转要经过一个相对长的时间。
 
 > 面部色泽变化是五脏精气盛衰的具体表现，一般情况下新病不易引起色泽的变化。所以如果面色失于荣润，都是病久伤及五脏精气的表现，所以为久病。所谓“脉不夺”，是相对“色夺”而言的，意谓久病面部色泽的异常变化较脉象的异常变化更为明显，所以不能理解为久病没有脉象的异常变化。
 >
 > 《黄帝内经讲解- 色脉互参》
+
+> **夫色脉与尺之相应也，如桴鼓影响之相应也，不得相失也，此亦本末根叶之出候也，故根死则叶枯矣⑴。色脉形肉不得相失也，故知一则为工，知二则为神，知三则神且明矣（2）。**
+>
+> 《灵枢•邪气脏腑病形》
 
 诊断总的原则是，无论望色、切脉还是舌诊，我们都需要先知道正常人的情况是如何的，比如正常的面色是怎样的？正常的脉象是怎样的？正常的舌像是怎样的？然后才能知常达变，通过病人面色、脉象和舌像与正常情况的区别，来分析人体气血失衡的虚实，并施以补泻的调理方案。然后再根据调理后面色、脉象、舌像的变化，来确定调理方向是否正确。如此反复，最终将脉象、舌像调理到正常为止。
 
@@ -290,7 +286,9 @@
 
 ## 4、总结
 
-诊断的内容非常多，这些内容散落于内经、伤寒等经典以及后世医家的书籍之中，需要反复研读、记忆、实践。熟悉中医诊断的内容，可达到看透人体的效果，让人的健康状态无所遁形。不熟悉诊断，即便理论再熟，遇到问题的时候，依然感觉无从下手。
+诊断的内容散落于内经、伤寒等经典以及后世医家的书籍之中，需要反复研读、记忆、实践。熟悉中医诊断的内容，可达到看透人体的效果，让人的健康状态无所遁形。不熟悉诊断，即便理论再熟，遇到问题的时候，依然无从下手。
+
+我们要求中医学习者在了解寒热虚实、精神气血等基本概念后，必须掌握诊断的内容。起码对面色、脉诊、舌诊的内容要熟悉。如此，才能在精、神、气、血层面提前预知疾病的发生，而不必像普通人那样，等到疾病发展至形质变化阶段，影响了人体重要功能，才能重视并调理。
 
 为了让大家尽快熟悉诊断，我们把内经、伤寒、金匮等经典中提到的各种症状，做了一定程度的整理，让大家可以快速检索并查询到教材的相关论述。链接地址为：[https://zuoye.gmzyh.com/showcat](https://zuoye.gmzyh.com/showcat)
 
