--- a/ok/rm/rm01.md
+++ b/ok/rm/rm01.md
@@ -176,11 +176,11 @@
 
 前面这个例子，重点谈的是温度平衡，其实一个房间实现卧室的功能，还有很多其他指标需要平衡，比如湿度、墙壁隔热度、采光度、地面光滑度等等，也就是有多个维度需要平衡。
 
-每个维度指标都和温度指标一样，有平衡范围和失衡范围。比如湿度就要有一个合适的范围，湿度过大变得潮湿或者湿度过小变得干燥，都会影响住人的功能。温度失衡，我们用“寒、热”来描述，但是湿度失衡，不能再用这种词，可以用“湿、燥”来描述湿度失衡。
+每个维度指标都和温度指标一样，有平衡范围和失衡范围。比如湿度就要有一个合适的范围，湿度过大变得潮湿或者湿度过小变得干燥，都会影响居住功能。温度失衡，我们用“寒、热”来描述，但是湿度失衡，不能再用这种词，可以用“湿、燥”来描述湿度失衡。
 
 无论哪种指标的失衡，都离不开“虚、实”两种情况，因为所有的失衡，无非是“该有的太少“或者”不该有的太多“而已，再或者两者兼有的“虚实夹杂”情况。
 
-从“敏感度”角度看，有些指标是敏感的，比如说温度指标，它随着季节、昼夜经常变化，需要经常关注调节。还有一些指标是不敏感的，比如墙壁厚度，一旦房子建好后，多年不变，除非遇到特殊情况，否则一般不需要关心它的变化。
+从“敏感度”角度看，有些指标是敏感的，比如说温度指标，它随着季节、昼夜经常变化，需要经常关注调节。还有一些指标是不敏感的，比如墙壁厚度，一旦房子建好后，多年不变，除非遇到特殊情况，否则一般不需要关心它的变化。人体也是一样，因温度变化比较敏感常见，所以中医经常“寒热虚实”并称。但我们要知道“虚实”是各种指标失衡的统称，“寒热”是温度指标的特指。
 
 从“重要度”角度看，大部分指标都很重要，任何指标失衡，都会导致功能的下降，严重的会导致失去功能。所以即使一个指标是不敏感的，但是一旦遇到特殊情况，这个指标失衡了，依然要重视，将其调节回平衡。
 
@@ -282,7 +282,7 @@
 
 不同的情况可以有不同的分法，比如一年可以分为4季，也可以分为12月、24节气、365日等等。选择合适的划分方法是为了方便观察、分析与调节。
 
-就像踢足球要11个人，打排球要6个人、打篮球要5个人一样，不管用哪种分法，最终都是完成了阴阳往来平衡的目的。
+就像踢足球要11个人，打排球要6个人、打篮球要5个人一样，不管用哪种分法，最终都是通过阴阳往来平衡的方式实现目的。
 
 > 黄帝问曰：余闻天为阳，地为阴，日为阳，月为阴。大小月三百六十日成一岁，人亦应之。今三阴三阳不应阴阳，其故何也？
 >
@@ -320,11 +320,13 @@
 
 #### 4.2物极必反：
 
-物极必反的前提是平衡，在大体平衡的基础上，升到一定程度，必须降，降到一定程度必须升。否则维持不了平衡。	
+物极必反是指标在波动过程中，升到一定程度则降，降到一定程度则升，以此来保持平衡。	
 
 > 四时之变，寒暑之胜，重阴必阳，重阳必阴（1）。故阴主寒，阳主热（2）。故寒甚则热，热甚则寒（3）。故曰寒生热，热生寒，此阴阳之变也（4）。
 >
 > 《灵枢·论疾诊尺》
+
+物极必反的概念不能滥用，当事物自身调节平衡的能力较强的时候，可以有物极必反的现象，比如热极生寒、寒极生热等等。若平衡能力弱，物极而不能反，就是死亡的结局了。
 
 ## 题目
 
