--- a/ok/rm/rm03-0.1.0.0.0.md
+++ b/ok/rm/rm03-0.1.0.0.0.md
@@ -184,7 +184,7 @@
 
 5、控制系统的控制能力要正常，在火量调节方面不能出现大的偏差。
 
-人体这个房间要维持相对恒定的温度，维持体温就需要热量，热量由气、血、津液带来，其中血和津液相当于上面例子中的水，气相当于水蒸汽和被水加热后房间空气。气、血、津液的热量由元气给予，元气相当于上面例子中的炉火，是原动力。元气由精产生。精相当于上面例子中的液化气，是人体的能源。
+人体这个房间要维持相对恒定的温度，维持体温就需要热量，热量由气、血、津液带来，其中血和津液相当于上面例子中的水，气相当于水蒸汽和被加热后房间空气。气、血、津液的热量由元气给予，元气相当于上面例子中的炉火，是原动力。元气由精产生。精相当于上面例子中的液化气，是人体的能源。
 
 在中医常用术语里，粗略的讲，阴一般指阴液，包括血、津液，阳一般指元气。如果详细讲，则要具体情况具体分析，不同情况下，阴阳所指不同，比如有时阴也指阴精。
 
