--- a/ok/rm/rm06.md
+++ b/ok/rm/rm06.md
@@ -2,11 +2,13 @@
 
 ## 1、部位划分
 
-关于部位的划分，在前面的章节中已经部分提及，但因这个内容比较重要，这里在做一个总结梳理，使大家能有更清晰的印象。
+关于部位的划分，在前面的章节中已经部分提及，但因这个内容比较重要，这里再做一个总结梳理，使大家能有更清晰的印象。
 
-从不同的角度看，人体的部位有很多种分法。就像一个国家的划分可以根据不同的标准，比如按照省来划分，或者按照方位划分，按照边境与内地的标准划分，按照城市等级划分等等。人体的部位划分主要有以下几种：
+从不同的角度看，人体的部位有很多种分法。就像一个国家的划分可以根据不同的标准，比如按照省来划分，或者按照方位划分，按照边境与内地的标准划分，按照城市等级划分等等。每个部位可以视为一个单元，有自身的要素平衡与失衡。
 
-#### 1.1、形体与脏腑
+人体的部位划分主要有以下几种：
+
+#### 1.1、气血的生产与使用
 
 这种划分方法是按照资源的产生与使用来划分的。
 
@@ -14,39 +16,39 @@
 
 脏腑包括：肝、心、脾、肺、肾、胆、小肠、胃、大肠、膀胱、三焦、心包，即是气血的产生者又是使用者。脏腑按照上下方位可以分为三焦：上焦主要包括心肺，中焦主要包括脾胃，下焦包括肾、膀胱、大小肠等。
 
-#### 1.2、三阴三阳：
+#### 1.2、阴阳比例的差异：
 
-前面谈到了根据人体阴阳比例划分的三阴三阳，比如太阳区域包括足太阳膀胱腑、膀胱经、手太阳小肠腑、小肠经，其它五个区域类同，简称为六经辨证。这种划分方法是《伤寒论》采用的方法，对中医至关重要。
+前面谈到了根据人体元气与物质阴阳比例划分的三阴三阳，比如太阳区域包括足太阳膀胱腑、膀胱经、手太阳小肠腑、小肠经，其它五个区域类同，简称为六经辨证。这种划分方法是《伤寒论》采用的方法，对中医至关重要。
 
-#### 1.3、络、经、皮、肉、筋、骨、脏、腑
+#### 1.3、正邪传导过程：
 
-从正邪的传递过程角度划分，可以分为皮、肉、筋、骨，脏、腑、经、络。
-
-外邪入侵，一般先与皮毛接触，若皮肤的腠理打开，则外邪可以进入到络，由络可以到经，由经可以到脏腑。经络是沟通里外的气血通道，因此外邪可以通过经络快速到达脏腑。
-
-外邪也可能留于肌肉、筋、骨，留于这些地方则不容易到达脏腑。
+从正邪的传递过程角度划分，可以分为皮、脉、肉、筋、骨、经、络、脏、腑。
 
 ![img](img/%E4%BC%81%E4%B8%9A%E5%BE%AE%E4%BF%A1%E6%88%AA%E5%9B%BE_16225444722166.png)
 
-邪入脏腑，特别是脏，则比较严重，甚至有生命危险，在其它地方相对要轻些，容易治疗。
 
 
+注意这里的经络也是一种部位，可以有寒热虚实的失衡。因经络是气的通道，所以变化很快。又因为经络外连皮肉筋骨、内通脏腑，所以涉及范围很广。再因为不同经络互相连接，所以可以互相传递。
 
-> 如果邪气中於络，则络脉不和，营卫不运，肌肤不养，所以麻木不仁；若邪气中於经，则经脉不利，气血不通，周身不贯，所以肢体重滞不举；若邪气入於腑，阻遏神识，则昏不识人；若邪气入於脏，脏气受邪，气机将息，所以出现舌蹇难言，口吐淤涎等证。这就是邪气中络、中经、入腑、入脏所产生的不同证状。
->
-> 《金匮要略讲解-中风历节》
-
-
-
-> 百病之始生也，必先于皮毛，邪中之则腠理开，开则入客于络脉，留而不去，传入于经，留而不去，传入于府，廪于**肠胃**（1）。邪之**始入于皮**也，沂然起毫毛，开腠理；其**入于络**也，则络脉盛色变（2）；其入**客于经**也，则感虚乃陷下（3）；其留于**筋骨**之间，寒多则筋挛骨痛，热多则筋弛骨消，肉烁腘破，毛直而败（4）。
+> 百病之始生也，必先于**皮毛**，邪中之则腠理开，开则入客于**络脉**，留而不去，传入于**经**，留而不去，传入于府，廪于**肠胃**（1）。邪之**始入于皮**也，沂然起毫毛，开腠理；其**入于络**也，则络脉盛色变（2）；其入**客于经**也，则感虚乃陷下（3）；其留于**筋骨**之间，寒多则筋挛骨痛，热多则筋弛骨消，肉烁腘破，毛直而败（4）。
 >
 > 《素问•皮部论》...
 >
-> 如《医学源流论》说：“故邪之伤人，或在皮肉，或在筋骨，或在脏腑，或在经络，有相传者，有不相传者，有久而终不传者，其大端则中于经络者易传；其初不在经络，或病甚而流于经络者，亦易传；经络之病，深入脏腑，则以生克相传；惟皮肉筋骨之病，不归经络者，则不传，所谓躯壳之病也。故识病之人，当直指其病在何脏何腑，何筋何骨，何经何络，或传或不传，其传以何经始，以何经终，其言则历历可验，则医之明者矣。……至治之难易，则在经络者易治；在脏腑者难治，且多死；在皮肉筋骨者易治，亦不易死，其大端如此。至于躯壳之属于某经络，以审其针灸用药之法，则《内经》明言之，深求自得也。”
+> 如《医学源流论》说：“故邪之伤人，或在皮肉，或在筋骨，或在脏腑，或在经络，有相传者，有不相传者，有久而终不传者，其大端则中于经络者易传；其初不在经络，或病甚而流于经络者，亦易传；经络之病，深入脏腑，则以生克相传；惟皮肉筋骨之病，不归经络者，则不传，所谓躯壳之病也。故识病之人，当直指其病在**何脏何腑，何筋何骨，何经何络**，或传或不传，其传以何经始，以何经终，其言则历历可验，则医之明者矣。……至治之难易，则在经络者易治；在脏腑者难治，且多死；在皮肉筋骨者易治，亦不易死，其大端如此。至于躯壳之属于某经络，以审其针灸用药之法，则《内经》明言之，深求自得也。”
 >
 > 《黄帝内经讲解-外邪的传变与病理》
 
-#### 1.4、表里的划分
+> 如果**邪气中於络**，则络脉不和，营卫不运，肌肤不养，所以麻木不仁；若**邪气中於经**，则经脉不利，气血不通，周身不贯，所以肢体重滞不举；**若邪气入於腑**，阻遏神识，则昏不识人；**若邪气入於脏**，脏气受邪，气机将息，所以出现舌蹇难言，口吐淤涎等证。这就是邪气中络、中经、入腑、入脏所产生的不同证状。
+>
+> 《金匮要略讲解-中风历节》
+
+《伤寒论》是论述风寒之邪外袭经络之后的各种表现治法。根据其人本身的健康状态差异，邪气或传或不穿，或一日一传，或多日一传，或先作用于太阳经络后传于阳明经、少阳经，再传于三阴经络，或未经阳经直接作用于三阴经，或由经传入脏腑，等等情况，不一而足。邪气作用于不同部位，则有对应表现与治法。
+
+> 所谓传变，则主要是对这一变化的描述，邪气由此经进入彼经，则谓之传。随着邪气的转移，临床证候也必然相应地发生变化,有传必有变，故称传变，也即传经。传与不传与邪气的盛衰，正气的强弱，治疗与护理之是否得当有关，尤以正气的抗邪能力大小为关键。若正气虚衰，邪气则可由表传里，由浅入深，使病证渐趋沉重；若正气恢复，抗邪有力,邪气又可由里达表，由阴出阳，使病向愈。辨传与不传，传至何经,当以脉证变与不变为据。
+>
+> 《伤寒论讲解-绪论》
+
+#### 1.4、人体与外界的边界
 
 从人体与外界的关系角度，有表、里的划分方法。表指的是皮肤、肌肉及涉及到皮肤、肌肉的经络，里指的是除了表之外的部位，包括脏腑、筋骨等。
 
@@ -56,7 +58,7 @@
 
 之所以把表提出来做一个单独的部位重点提示，是因为表这个部位是人体与外界的边界，外部的邪气通过这里进入体内，体内的邪气也可能通过这里排出到体外。一些脏腑疾病在治愈好转过程中，通常会有邪气出表的过程。因此表这个部位出现失衡的时候，有哪些表现，如何治疗，学习中医的人应该掌握。表部位失衡包括我们常说的感冒或者一些皮肤病。感冒对于健康人是小病，因其正气足，常能自愈。但是对于有脏腑疾病的人，感冒治疗正确与否，决定了其脏腑疾病的减轻或者加重。内经说“善治者治皮毛”，也有中医说“不会治疗感冒就不会治疗癌症”，即为此意。
 
-表是一个概括词，包含皮毛、肉、经、络。
+表是一个概括词，包含人体表层的皮毛、肉、经、络。
 
 失衡部位在皮毛，可能有发热、恶寒及汗功能异常等症状；
 
@@ -110,7 +112,7 @@
 
 ## 2、疾病的轻重转化
 
-关于疾病的轻重转化值得大家重视，通过几大要素的具体分析，我们知道脏最重要、腑其次，而筋脉皮肉再次。但是这里有一个很现实的问题：很多时候腑病或者皮肉筋骨病的症状表现比脏病剧烈。比如发热这个症状，中医认为发热多为正邪对抗的表现。脏病之人正气不足，往往发热不明显，而腑病反而会有高热的现象。所以当脏病向腑病转化的时候，病人会觉得更不舒服。这种情况是比较考验医生的定力和技术的，如果不懂原理，处理不当，会重新由腑病返回脏病，功亏一篑。
+关于疾病的轻重转化值得大家重视，通过几大要素的具体分析，我们知道脏最重要、腑其次，而筋脉皮肉再次。但是这里有一个很现实的问题：很多时候腑病或者皮肉筋骨病的症状表现比脏病剧烈。比如发热这个症状，中医认为发热多为正邪对抗的表现。脏病之人正气不足，驱邪无力，往往发热不明显，而腑病反而会有高热的现象。所以当脏病向腑病转化的时候，病人会觉得更不舒服。这种情况是比较考验医生的定力和技术的，如果不懂原理，处理不当，会重新由腑病返回脏病，功亏一篑。
 
 特别值得一提的就是西医的消炎药。从中医角度看，某些消炎药是非常寒凉的药物，能普遍消灭体内实热，比较适合于身体强壮之人的体内有大范围实热的情况，虚热和局部实热都不适宜使用。比如局部实热，应该针对局部进行泻热的处理。如果大量使用消炎药，虽然这个局部的实热也能解决，但是其他部位的阳气也被大量消灭，容易变成全身普遍阳虚的失衡状态。五脏阳气虚后，疾病容易由皮肉筋脉腑病转为脏病，这时病人的症状看似减轻了，但是实际上已经造成了更大的问题。中医是通过四诊观察人体的外在表现得知这个情况。西医还没有发现这个道理,因为仪器设备还检测不了人体脏腑的阳气情况。但是西医通过大范围的调查，发现滥用抗生素会造成菌群失调，降低免疫力，造成各种副作用，其实这就是中医谈到的人体环境失调的结果。双方算是一定程度上的殊途同归。
 
