--- a/ok/rm/rm07.md
+++ b/ok/rm/rm07.md
@@ -91,6 +91,8 @@
 诊脉是通过人体一些部位的动脉跳动形态变化来判断人体内各种要素的失衡状态。
 
 > 十二经脉循行部位上均有搏动应手之处。因此，可以在每一经的动脉处，测候该条经脉所络属脏腑的功能活动。例如，中部天，手太阴太渊穴，即寸口脉处,可诊候肺。中部人，手少阴神门穴处，可诊候心。下部天，足厥阴五里穴处，可诊候肝，女子取太冲穴。下部地，足少阴太溪穴处，可诊候肾。下部人，足太阴箕门穴处，可诊候脾，趺阳脉冲阳穴处可诊候胃。临证可在上述部位，测候所主脏腑精气的盛衰。
+>
+> 《黄帝内经讲解-诊脉部位》
 
 脉的跳动是一种波动，其频率、力度、长度、高度等等指标皆有特定意义。
 
@@ -290,7 +292,7 @@
 
 我们要求中医学习者在了解寒热虚实、精神气血等基本概念后，必须掌握诊断的内容。起码对面色、脉诊、舌诊的内容要熟悉。如此，才能在精、神、气、血层面提前预知疾病的发生，而不必像普通人那样，等到疾病发展至形质变化阶段，影响了人体重要功能，才能重视并调理。
 
-为了让大家尽快熟悉诊断，我们把内经、伤寒、金匮等经典中提到的各种症状，做了一定程度的整理，让大家可以快速检索并查询到教材的相关论述。链接地址为：[https://zuoye.gmzyh.com/showcat](https://zuoye.gmzyh.com/showcat)
+为了让大家尽快熟悉诊断，我们把内经、伤寒、金匮等经典中提到的各种症状，做了一定程度的整理，让大家可以快速检索到教材的相关论述。链接地址为：[https://zuoye.gmzyh.com/showcat](https://zuoye.gmzyh.com/showcat) 。
 
 光明中医教材的内容是非常精华的，是老一代中医毕生经验的无私总结，所以大家必须认真学习教材。
 
