--- a/ok/gmzy/gmzy012-1.md
+++ b/ok/gmzy/gmzy012-1.md
@@ -59,15 +59,17 @@
 
 中医前辈对古今中医人才的培养规律的进行了高度总结，在此基础上整理出了光明中医的教材和教学方法。经过几十年的实践验证是成功的，获得了大多数临床中医的认可。
 
-但是能够完全达到光明中医的学习要求是很不容易的，需要能静下心来认真学习。我们见过很多学习者开始的时候信心满满，学习一段时间后就嫌过程枯燥，最终半途而废。
+因为光明教材有1000多万字，知识量非常大，学习的时间长。如果组织老师全程辅导，所花费的成本太高，大多学习者是难以承担的。因此需要学习者先以自学为主，对中医知识掌握到入门程度后，再找老师进行实习、实践，这样老师指导起来就容易多了。
 
-为了尽量让学员用最短的时间打好中医基础，网校提取了最主要的7门课程放在学习平台（https://zuoye.gmzyh.com）上，供学员使用。这7门课为《概论》、《本草》、《方剂》、《内经》、《伤寒》、《金匮》、《温病》。这些课程包含了四大经典及其学习基础。中医无论怎样变化，都是以经典为基础的。能否认真学完经典，是业余爱好者和专业人士的分水岭。对于真心想学好中医的学员，只要在学习平台上认真完成全部作业，医理就能确保过关，达到中医真正入门的水平。在光明中医的教学要求里，这些课程已经是最基础、最低的要求了，如果这些课程都不能认真学完，想成为合格的中医恐怕很难。
-
-现在中医式微，很多光明老学员担心中医的传承问题，是愿意带学生的，关键问题在于符合要求的学生难找。现在的中医学习者大多没有系统学习的经历，中医基础非常差，很难带。如果能系统学完经典，相信有很多老中医会愿意收入门下的。
+为了让学员用最短的时间达到中医入门的程度，网校提取了主要的7门课程放在学习平台（https://zuoye.gmzyh.com）上，供报名学员使用。这7门课为《概论》、《本草》、《方剂》、《内经》、《伤寒》、《金匮》、《温病》。这些课程包含了四大经典及其学习基础。中医无论怎样变化，都是以经典为根本的。能否认真学完经典，是业余爱好者和专业人士的分水岭。对于真心想学好中医的学员，只要在学习平台上认真完成全部作业，医理就能确保过关。在光明中医的教学要求里，这些课程已经是最基础、最低的要求了，如果这些课程都不能认真学完，想成为合格的中医恐怕很难。
 
 在学习时间方面，如果学员每天能拿出2-3个小时学习的话，大约2个月可以学完一门课程。7门课程全部学完需要14个月。一旦学完这些课程，大家会发现自己的中医水平有了质的突破。以后无论是学习内、外、妇、儿还是学习各门各派，都会如鱼得水、游刃有余。
 
-另外，白永波副校长说“我们的教材还存在一些局部上的缺点”。确实如此，教材中确有少量文字印刷错误以及一些小的理论瑕疵，但瑕不掩瑜，学习中不要因为一些小的问题对教材的价值产生怀疑。这类问题一旦发现，我们会在电子版以及学习平台上做出更正。
+能够达到这个学习要求是很不容易的，需要静下心来认真学习。我们见过很多学习者开始时候信心满满，学习一段时间后就因过程枯燥，半途而废。希望大家能认识到这一点，努力度过这个阶段。
+
+现在中医式微，很多光明老学员担心中医的传承问题，是愿意带学生的，关键问题在于符合要求的学生难找。现在的中医学习者大多没有系统学习的经历，中医基础非常差，很难带。如果能系统学完经典，相信有很多老中医会愿意收入门下。
+
+另外，白永波副校长说“我们的教材还存在一些局部上的缺点”。确实如此，教材中确有少量文字印刷错误以及一些小的理论瑕疵，但瑕不掩瑜，学习中不要因为一些小的问题对教材的价值产生怀疑。这类问题一旦发现，我们也会在电子版以及学习平台上做出更正。
 
 学习光明教材就像爬山，每学一门课程就会提升一个高度，能达到哪个高度完全在于学习者的学习毅力。希望大家都能登顶成功！
 
